fix plex deployment

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:jF5m71vJCBp8qPTOBXYQRVDCTnk82JLJwkHq8k+vxjKRPXhGobuC+r4/BrkosXubqL5x9KrZSVoVuC8u3zBj10I=,iv:ThdzwTjd2Shzxuh2fN11NgyAfjlh2JDnN2yhjlbqie0=,tag:orkG70C6ejEc39gtRKdR/w==,type:comment]
-#ENC[AES256_GCM,data:yu1pAA5UKVXzw2bOMd7jV1vW7SSWL0iGhRCnXKSUjRq/YSi1A2ZeE71yMXg=,iv:Bw6EZ0+EB/RaUtBb6UGJwqitwVidsn0+XuD8xVyLYsI=,tag:t5x8tJfUk5KcV2fjURM0NQ==,type:comment]
-VIP: ENC[AES256_GCM,data:DjpG3JsE09K6EOwBUQ==,iv:g9mrC0zK5BZQooHGey8uBYlBTiDouWplwGS6W2Dt55U=,tag:pMvi/6QG6eA/n2tl1FqD0Q==,type:str]
-#ENC[AES256_GCM,data:D6x/e4bO9xxbeOAtg3i9M1hmeTqY5KtVsvGO,iv:e/aoBKBzz4prBbYZfxshKCuUKfYnxeUR6wjKSXtYIiY=,tag:hSo2vTYsLd+4iYTApc/n/w==,type:comment]
-#ENC[AES256_GCM,data:TgZGY/K8xATdW/+2AH/Enz42k9EOq3n5c2B94NNfa1YZyPmae4V0EieICN/8RN/ZwRoZD78AHylFTyIxBZlpjPsKeQiWhkcawnZ4BX0lrOs5cJ2rGThe70o=,iv:a8yiKz9PGbKAthyWxky6QObkEXG36Nsf03yB0//BAic=,tag:sLv5FV4WPD9PA2Svy/PtHw==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:qMMu3iXFEA5jQjtuDD8=,iv:1FErXt0gajBxYvx6wRB/KfAqtrNvr/tjDmFHGCCAQ6c=,tag:IsaCSVfNEUYOvD+C29yl7A==,type:str]
-#ENC[AES256_GCM,data:38VsJrKZzxWapPIrTsJIfBOl1p4RF0RmqLU3TnWsTWxJVQ==,iv:+vC6ImG/UGRY9VsDJ4/EE878axSNMfLLYMVan0/n1QY=,tag:sZQ+RCoOYD9EFhe1Vf3V7A==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:oGlJG4l6u0DjqC84eQ==,iv:KdUgVsHgvVcJywDqGuWxKLZ44DxkfyPAghtRUBI20Ko=,tag:HNW2xA38M7xkHPKmaJnfQw==,type:str]
-#ENC[AES256_GCM,data:fjmmLbMnY1G6vtIf+uPaYF3rCt4ID7wzQqK3HAwmagbIBpOqhU7oow7aAtN+QkQ=,iv:/f3cvf8bT2g7KLOjrSHOPwxFjuzWFJysERo0LRE6vsM=,tag:1B4PVC+QqYHjv0xgRAk/MQ==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:gDwi2cyGqiT0ZNGPufDxsgnV9fX/KnZ9CSDurBSxBA==,iv:zQnvNllEQVpNnbtuLxTVx7YS9Xtx3cApGweFZXl5rPo=,tag:mlqG1vv4qMy0hl5Az7W/iQ==,type:str]
-#ENC[AES256_GCM,data:BOyn1qCACoNxZX59bT97YAM+n9C5SCi51JkpAxzkbNJXL8aG+2LDKHgqHBhoj6k3q3NAvu87lXDI6JI/9sjzGCY9ky0oKpu/TSQliJKXsXAxlw==,iv:guiWb3qp7XjGcMPQrSyH7+ytw+oXhIAC66SCX/iUE3c=,tag:tTzoOyHhUZSiOEO0scdoag==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:Q0LhhNow/Ym7WRnOMTjg,iv:vGuhd/XvwLVJEY5eB2CneiA9B7PuiN0XTkVWCTX/07Y=,tag:qiXmAtzx6A+ng7XwUFKY0Q==,type:str]
-#ENC[AES256_GCM,data:+pYDNqTo8ju4GqX+Qst86N+Q5lmXPFy0MnZrzX6yMi85,iv:emIogR/65x5hsLOMzgPUtcRFb2UcuWpF/7vNtiuQeUg=,tag:VnBn3uRs9dwJRR0XF/0eTQ==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:Xy8ChrQ6zjsM5+q5U+0B,iv:5fg3znk5TbhbFcbLW3zUb+S2qpAY+GdtLvyCx4V9/c8=,tag:K7qduIEVD0STxonuhz9keQ==,type:str]
-#ENC[AES256_GCM,data:rUbRBqIjkkeeBelmfXXj8pmYYsBq3BrS5KEEPCL3ylJEGF1e4Sdo8oTcyk7PvYZxkQ1q2kOJq6x5XEpbNBOaFEHBbVr7vkFOQTExLBxrkIQ=,iv:AIeAAP5djK7L7nJWGPWp6kFpPEgmlbaRcBhzbkuX54E=,tag:JtDfMKuaDTFqZMevYXMjFg==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:KiTxY4gGa+yLrSTlGBnB,iv:y/P9pQJTCsfzGLSV4xJcE9F6KgJG2XFurVa0dc1Gtdg=,tag:KYCD1+wx/HvPg0j6aZNDYg==,type:str]
-#ENC[AES256_GCM,data:Ret/vZcj824O2miBlqEwCK4BQqHjuTbR+VBlrTMqWjUefIYTzs7xrcNO2ukYJwuaAKa4hkozJ8/M5xrPomjYm+VVgtQjaKNC8CrsTttnbdO4Zu+IWlF3,iv:EL9xW4NN5bw/DzDZ0Nuw96Kd32uZdvJKA5d70UTZ9MM=,tag:BJXcAi4K1JymOHIsQTgjBg==,type:comment]
-#ENC[AES256_GCM,data:Bd4Uav+W2nau5OhWte/5zSAaAbtLDNHSwUF6lt96Sjkf3v8WUh58VuXBJnKhiksT03ey2L5T9AXJfHVw0BM3HEMZmDnVEXxF2WMfK8+4xo6L69N7SLfUYXLe3wTS0iON8SBSSjFO8QQyiXdFhXd6ttcGRBUdlimrT6Ts/A==,iv:syJTE6AZZnZbd7m640JjGsoNOdy7sO4xJoliDX0nNt0=,tag:tCC0/o4XqM367wP++c15ow==,type:comment]
-#ENC[AES256_GCM,data:mrfq1heRoWr7O0McJM7KK5f0/u7tlkvyHMhTEX8qvAUBIjVgM9gpIZVgWuET4rwCiHhYylcYwgsfJ7KM+TbkIOPGA9dgaXhOnYPA9KDvEes=,iv:rFlUh5sgySQMNpm7dKtwkhiaAxWG253HHM50I+58Mjg=,tag:LEb5Bj9sYtYILSxflFLPtg==,type:comment]
-#ENC[AES256_GCM,data:PyNra5mLF7AlgTY8IO08/ajj2EbFIXLGXhW3ahrlAmp7BmysrQY7GXfpvsYzm+RGmotvJdam,iv:ZRs8FNMdVG0c6dFa9Uau2TWJxUzmN8twRAErgSzHWYo=,tag:QEKNL/PyrV1fy3tvB2kh4g==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:LmgwSMGDQLFpRs6G,iv:F4df/Jry3swWbhyMDb2TwRazxsT9y8Ou+bgJoO/lmrw=,tag:wdDLzjmIWrOzWgk1TJbSJQ==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:18He1MEC+kWIGYYMC9np7uA=,iv:9QkPof67HcZpGL2OD9y58bZUGdWmrMzJ/8IDC7SWJOQ=,tag:fBodbCrjnUWXT48o54iZMA==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:1k2eYfMedeO6VNyy2GbdooVZlLn+bF3oLSfFUP4fb2c=,iv:5rLDpGHdesKqn47WB9DIlrj5sNnhJiagaZXUkOPCBME=,tag:KJ2QRUKEvyLGC+ddkxezRA==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:KQUOtL/u6VfkVs2LY3Lfpz2C2kfmNrI98KGbe1+O76laeCWRXPC6tA==,iv:bp8CZCp4ppW+Y8RWL8+umUexadkGzOfSDiC8kfNGJvk=,tag:Fo5viXv9Nc8zTO+52kpKFA==,type:str]
-#ENC[AES256_GCM,data:530ObweiMHBGUL7AJan9Ouj2CogNcbP20ZTBC8p30JVlGIFQrxQaD4K32Zf6jiakle4D/ckK9rKyTdNwvrL1UQ==,iv:18hQ6qDjsz/4HqE2s/EMBGzwxjxz3WKHkiYZM7iEz3M=,tag:XoRHnxSrhYnWAZg5/zBAHQ==,type:comment]
-#ENC[AES256_GCM,data:6tXbYI9t744sRRUsCwpKYvZbzn+0mgoGFxkXwJHIpfeye+gIQu7JUTg85Hem3nkbIk8dS49GmuM=,iv:AV5QYloJn/4jaYnVQNSjR4N5QrvGrxB9spFShirBI5I=,tag:UbMIiI1BAqi+NnbFpIlZHQ==,type:comment]
-#ENC[AES256_GCM,data:Hii6iRfCC+Reb45AuEhHdQPQfHDqoXKMjw==,iv:EMUFFow6UAoPeAXzPXVhe/e0aFkBe/EkTFuOc/iz98E=,tag:i0BrDy8P2t0EhHKpAknORg==,type:comment]
-#ENC[AES256_GCM,data:xrGJDL7LefC+qcKoZCskQmiLJYRCGF6Pog0HpkUJsBj3llRR8FXU5HPpP7xsumKPD0LlJae2V9ZISOUN0xP4givcPvtqnysavyIAShI=,iv:XNLOjNNWJI2F0HgyQp+lQf68DO9zutFMX5snNABKUfs=,tag:q28kxdsPwiT0AOUFD4Uu1A==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:swJubvhSRcpHym+PbkD0g9ls9okYuaC76sh564y/rh1ZUZoV4fxNK6nCpXrr/NN6,iv:wRtB55ZAALFAOMj5n1uN497Pac8kNqSWSbBucb4HDhY=,tag:4m99mMtnvS4legTn+8SssQ==,type:str]
-#ENC[AES256_GCM,data:WM983QYwJ0e9InQh1VGsNxCDuljT4Oe57dgRKeHUqh7wk4K9rUzIST4X2NxaLeFAYtnxTVh0FeLRjWztYpHNHDxbNloWl4U=,iv:VnD7AVCUPig169PhCI3Ff5OcltXrE1T3E7299Xu31AE=,tag:nQqtdoNtUWuMAciIHmz/Sg==,type:comment]
-#ENC[AES256_GCM,data:tCnDeIW9NySntyPoNXu8Tfe+FdYl+y3aWeKTlf+bFrbHvn81jNjkBnfQGx4jx6mjZswA6PeG,iv:qZ3uuQaTEZ8zajuISj3AIcB2ppvIxsvM+pnMebJ+4Mc=,tag:OU9m2YOSUDufHM0k667YWw==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:oW4ZxNtQOw==,iv:DYgr2gUTBfRJxQru0CtZRkv5VaXtBeKZ9JDqpXSu8Us=,tag:Fv1yGbAvyvwuNHKtXYB2Ow==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:augs7pgIJdn/gS/soaG3hMjnEQc=,iv:UMqMyAEwbrdnpr9RH6Vkrqyrin8tgjZdjULXwu+MEgE=,tag:KEmclH7oqIIGOk1cCEDnxw==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:B/YgIMQ5JUp4IzE=,iv:2HySo/BmDkxADPakHdTAHcFmaaFPnRZwdMUG+eR7rLA=,tag:XXX2jL0Vgyv2SpxmtzdTNw==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:FDi5fhViAG06I+XXLEnQ,iv:SqexV16QVpiTw67b9UxIAKIZXrgoIckxZ6eBkuralxg=,tag:x02FI9qrevkuDjZ4N8vKlA==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:Xnacaq4UKz0wPloUn+a5Pxrfxu7gRsh6IA==,iv:E73CCJRRVLi0u8sx7E2J8Ngrl5f5qq0DNBEPjr3S6V0=,tag:eZ+bVl3qkzrYvXL8+gvQPA==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:slOdnVO1W9z9I1VDNo1S63Ko9lGU8svw,iv:Fpmc7z9APqpZIZStuNlxhSqfbijZgRMdHhLIITAYER4=,tag:ij84+BVORHNLRHf5K5+6Xw==,type:str]
-#ENC[AES256_GCM,data:LIjc5Gd9pTHh7fxYhjqxD1RkRpl1fyEzqqRA6FIKx+/zPIcKR7A=,iv:YkJ/PWuadF2TCyIvZzjsq9060EyGk76o7/ASuPogdYo=,tag:5lN7CtLjKWlNny+63utg2A==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:fowymDYD5RJIdvd5xX00FRz3A+Q=,iv:g6CnHow1HFm2Vv3uqLoJFxgSDU3ldY26C1UAncImdGM=,tag:0/kIVT8H4bBwge49Y2z6Tg==,type:str]
-#ENC[AES256_GCM,data:nPtcYanYm/xNS9U4aTg=,iv:9hx/8KF41eKSp0wdOg9flRSCPlH6247gYClQfKtnl0o=,tag:zUN2+kDfBE3Wv03A3fdseg==,type:comment]
-PODNET: ENC[AES256_GCM,data:Ek+KBGa96LKtFJhEqQ==,iv:DrJQ4E/Arqkdz4HsYhhC5zVVcufozvpFcTXZR7ZbMcU=,tag:qDMrlDVkD83KUdC8uQkOLQ==,type:str]
-SVCNET: ENC[AES256_GCM,data:c9Fmqxeopz0plVtWZg==,iv:fMLeSmhLAA4ZCVtq8F7MB6CktyAjwF/JmGjG6OWvAzM=,tag:UOXLvxCPPluw/pBJP2z7jQ==,type:str]
+#ENC[AES256_GCM,data:UejjHCHlgFH7rNDGMVpW9oIIMiOkSQWqL+IsgUXUi0RX/aXPkGizWGzRmYnITvdjRdb06p1yzEXNpK/+HvXUto4=,iv:dngO+nqkdTQYIt6wb/Mp8apCwajw/3uBz9ybL/mcCHA=,tag:547vV5ClW7Jz0MibfmUSBg==,type:comment]
+#ENC[AES256_GCM,data:Vq4mjz2GDg8GwFQqFDb8APZ4N8i2vKXPL9x750oqPRFQulMB6M7/mjnjdzk=,iv:X3SK6mIRKeQ147yHjU54XU753s4ZAbJkjAEtZO/0nEs=,tag:3c4le+2V8YnQMukz0Ggtbw==,type:comment]
+VIP: ENC[AES256_GCM,data:Re6qUfDt7GcvfxqBzw==,iv:spIQExPnUuaYsOmA72byFGWJpedPMZcgR91k8ZOzNew=,tag:ZXah5Gja08/dgsDDQIac/w==,type:str]
+#ENC[AES256_GCM,data:IWmBEkdAefCv/X715rR0/30QvGZLtpDt8vHx,iv:U4ZxXEw0ODZBBELXAzBsEbsjmSBciOV4vZSoJu6AF7E=,tag:l3doSLKAlNocflv70Is9gw==,type:comment]
+#ENC[AES256_GCM,data:cJc9PPerCmij55un4fWkYYJk4c7c1hLSq1/qQBtanXpj3UGK9flGSzq5qtj7Z9bvl7aQnc1nks+K1oM0tPXOH1WOC/+LHQSW9Ea7LXCzONdfIbMeP32LYiE=,iv:XMXqoXpPVV9ZaOXNJpTWvit2RXGGw7gC7lRYsYocEAM=,tag:/DDXVcH9p29Y6R+aifeb+w==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:i6uvTg+TxuoSHHT1yac=,iv:iJrWUnV9TBP80Kz2Rs0ZCj6wP72viBe7VUfetj+jXBQ=,tag:v3rj0wq9rTR5RKRGCQce8Q==,type:str]
+#ENC[AES256_GCM,data:gK6oRBq+cG+/9qj6UlnytBkr7dTeGaJW//pZQ9StX+mLrQ==,iv:YoK/TBb3bVrtBQryYz16NYekDJGQSvQDHvAkS+i1f7M=,tag:DVef2r+LFkAW6qAs8dLrbg==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:eOczNk6qFdcihe1INg==,iv:wOkfIDElKgcD2HDTSk4bjBnc6ToKyxR3hkUBj2bq9Rs=,tag:1f8rrHU02N/pTXZ0eyTrQQ==,type:str]
+#ENC[AES256_GCM,data:hyvmDw6ze93tCRelMwNtFaA68MBSWj/6AZYpdeXPkEKKViYvDz90ULolD634tZc=,iv:7njvcQ9Su5fQkOmQbswyn3uupSi3/C3HlQYN5kDad6g=,tag:J4stSZAwRml9mMeGhOAbsA==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:dRnwIgG//ZvFOXZ/DoUYKNm+S8Ysjo7aUpNX1uHZQQ==,iv:1xzzOY5sg8cQiBRLPmWc8OjrJZDFrACG9hbKKTnPOKY=,tag:MTqq5qqddMYGTqJbMG6etQ==,type:str]
+#ENC[AES256_GCM,data:W94yFa//2lWgsde1J+tLekahM/BiOODkZnbcOyJfm760popSzXxsF3T9cBoA6f1vTqa+25BH2ktk3iA0jtoed4jQi39aQojMp2l/YyDZzCfwgg==,iv:6D9NsA7By3Jv/NXvX8j664rsKN+OzTJWp/8CzQxmkoE=,tag:5nZiw1UhHWfXEV8CWNDs9Q==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:Y5yT7UOSh0aO1b35drz5,iv:iAU0Kb6BRdTW7c3EHy45V8BcMvwpPhxT+fQWR8FdnMQ=,tag:oTQaW3CTDfj7Jeouuv1dQA==,type:str]
+#ENC[AES256_GCM,data:Z1E0MmaLcAQR7UQpjSV6YshwW/ZL2ySIchFcm/nzkUCC,iv:UPxLHvW4vh1MYzlmkI3aOHxjMOD4DcQluM3U7pPlZM4=,tag:tQZTgtMGZ6a6M7CxCP3s6A==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:kpBmPmepyENfrvw2qFu2,iv:qOWFbI4UywnRveHmCTX4RCFTp/PZZeigNfFJTdE2NPY=,tag:uw8f95DNvkYiJZ9iEoon1A==,type:str]
+#ENC[AES256_GCM,data:TriYczrRYCGg+gibCqkBIlZQxSr1enAmkzpqCtSXrTCqA8ucU7wYzY9LODyT+CUpBTibXTgnt4l1jj1/tca3b93V9LObM19g+fRjXFSnq0w=,iv:SziwzY4iyRpzWwUPrn0wlDGCFBRbpToiGRAEPJTn5lQ=,tag:u8ep+mDe2sZ00zNr8gnDNw==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:MrTVsy1EeGEUMsZWFWm4,iv:9aUJ823F9V6H9tCyVSn2Ckf1/UtdUc0TRqVqwEB+CB4=,tag:w0QFsNiwnt8FyU74+YyMTA==,type:str]
+#ENC[AES256_GCM,data:ar7fiGgsHL2YtulZD1edfXoLBXpP1bogtX9tzEQJEpL1Poz3QqQ7vGX3vRK7rNiRhWRcwUIhN2MuJeuQ+rEqNpcH3AFFey4wFNddyIBaPj8iJ5ud+uq0,iv:hkR9cUzIRhuzHg71c1/G0J/mlNex4WY5FRMMnep2R5s=,tag:0tGF3bIqr0ZdPjuuqFEkQA==,type:comment]
+#ENC[AES256_GCM,data:C3KfnN+RDC5KUXm5WQNa/0sjkm7TmNw4petYTl8KS3MIxIleq/bU3AN8lIw1qAgye+cCLDBKlO3Fzbn8rcb7mLx6fLUtP5Ox1euD2tkKf5SG+YjIK2YYGOVbK8xUx09jhhJoxf8MXXcKCKgD38E60A50Lb9VcLTSNGoPJw==,iv:R7CFABKIRR6mB/CRrxLi5vvKVCwifJH2iZu0dmWcsjc=,tag:nn2hK+HOSOaJJlH5b7NQPg==,type:comment]
+#ENC[AES256_GCM,data:2JVDxoIs56jUDUrH7Fb2/gLTjvENNLZLDDYZeD9pTDbJjJunmlGavYA+M7rhpeUBTfAAIFshYtgzdKAeQoqFKvKokgdk1SHm1WQfiUVYX9Q=,iv:ghQHpq58GpmQ3MUa4Mu+dlpZfB2hYdYJ2zRAJ62wB94=,tag:jJB++6Iw7lfuwq16HOJAGA==,type:comment]
+#ENC[AES256_GCM,data:4EVBB9HlKBCrtKLvYOnULvjU0W6QOiESFwiP6eCWcx9tOmri0I1FfP5lsSGcXuwR4s9jc5aC,iv:7Uhl4jSIPvqiEW90eX5lMiqJTaGLTms8OFCtpO8WBUM=,tag:W9HaRlURYoGkIQGHcd134Q==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:WAtcg9bj3avBAQai,iv:BTTSZZ4wL68jHLhl98oXWaXWN706vqvI4l/dTK3hOxU=,tag:tYp35ptXv6tpdka/FgWjvw==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:3lvkzteoRhwpl3I4YWnPFcE=,iv:kcp1xZI0M69/1fCncbSIdbyaCMTRTBO4fFFvqzuzsvw=,tag:9JgtUHwhh+72fky71zczlg==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:WR1XBkg/gy/JQCn4Qs/ReqwBUa3nn7mRPPiOZ7ANvrk=,iv:dAmnvDaB+eO/KwlIelXGiTam4xI6nvaDP7WPjZ12OXQ=,tag:7YwIY+V8JduAMTSOgTjTmA==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:FYclvxV09u93pzvsnDewI0fk/mCYgJeOa3akrHmp6QjtDmKRe+WQZA==,iv:0zcTBqLswRYHEwL+gWNzjD0BuVoew4mmaspS1eYvS+U=,tag:lyUGfobgVxBDVXKL+Zowzw==,type:str]
+#ENC[AES256_GCM,data:QjgqXP7f/1etk+Z5LKocaGKwAgHkiQNbSb5XCsOm0ykJ/qDNXfSY9gfYvL1yXZtkuHThzp7p3UeUX3N5E5wGiQ==,iv:lJWql1OdLf0T4J9VvyRKNmg84jAceth9Ne7OXA83msU=,tag:bDY9HNeGKGgIJ01uW6UizQ==,type:comment]
+#ENC[AES256_GCM,data:m6g84V7wcgO6FXsU2kxFCDVwLJ5fT0PqPweBwWmNW6E61lng3y1a3wWtFS8f+WQ2Hn5oKjpjeFk=,iv:KKmgVGf5NUvhybLaHkdzibs32ZF8Ppto1FTlyBp9N7g=,tag:yHfVHqpg07an6ofFhNxAig==,type:comment]
+#ENC[AES256_GCM,data:YWWBVOSmIanaiCETcGfqdKestflZ5XxgDQ==,iv:sGaUiVw8IGRC8Bb0AMl30Xav7Ux364nvyzmTKqDFKmI=,tag:XcPv+koirGebJpYIHSRcMg==,type:comment]
+#ENC[AES256_GCM,data:tNsuF/b10/ph9u6fKIaTzS/zx7kSs6b6mPE3M2IqntsLFKg3qDqTQNYolMCeClUMb9uSy3L4QDg+jl604eTSOWYoEtZF0Lup3zuBaL8=,iv:L5mq2rpzhxwqI/4lzBwJsWP+Zfzpv7shc4Vmpaap7IU=,tag:tBDUQaK4K0idV6dWEZuE0w==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:Ulszk1n8/DwcM74rt5iqUTuqyexE7ZgPwSWiaOHth/Unuk4WtsmLsobg+loqkr4u,iv:4c20Doaj9fj3o8bftY/Vq/+J7hTntleMDjWKw645sYk=,tag:3o9eExeTcjaIy92HrirmEQ==,type:str]
+#ENC[AES256_GCM,data:jh4THb2JWrxKi8hdS0G+H/AaAfK2aoQVHlLQlJYcx+pUS20UmZQLuumcamNmxopIa49nwfOqPjiQgDSKw+M53/vUhyUPTrY=,iv:P6yy8eE1gi7TXj3sqrcGAlA7oKNZzO1L5/iGIzZJgyQ=,tag:i4stzvuhxJeqtB/gafin0A==,type:comment]
+#ENC[AES256_GCM,data:/MuTdxLgWsr6ENHU6Sggx6RmsyJs7ZjNe6hLzPofC48L11cVqfaLyh47qkZHzmBIQChzXiVH,iv:Zp/KeYQQhIHDds/Uv6Z+ZB445FOveCK/UzUxdjM7fvQ=,tag:CgmVSOnmPYTDd+STQgwqgg==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:pKqijrTZ2w==,iv:s76kq+TU3K8VV3bsHj8jx1uibhGDOoEyYhdgxYCftrs=,tag:65ZWgqOwQE3ryw0qN2uPLA==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:eUcUjE0uvJC2g21fzg/NMjcZBiU=,iv:bFdcl6+StM1ib0zcI+zj86VkukyrwgBQhAWq0LHaCUE=,tag:zjZ5qC3H4tcrwzVXzxxkCA==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:fbtQDOoQnzhB9EE=,iv:3FJXAD8/YPDTcRgvRXMa97TvyFFvJFUbgecO3KuUbsE=,tag:NYfTASjB07AF2385faoe1g==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:NZhUIexUMTgGM5yxvEDW,iv:1gapXmcsTRSl80rcj92VxHJDQ/w5nRL1RRDYqa9mWmI=,tag:eeylwl5wTKXDjuw5wSi/Og==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:mUzVXdHAxWjplS24Cvsdvx+66+2DQJwBKA==,iv:TlObJTSDTiF8uovypCSfP3jEv8JyUoqvFjiTHEK9Q8w=,tag:9wjORy5sCzm/iy1/9cptrw==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:cvFWuYDtnRm+jPDO1nZuEHREtFRebasH,iv:jBy5c7o5t+QC2gIro9Jp2deiBxE7pT8ZmFAShsitCgE=,tag:cuDQmn6Md5JkTdoW25aMRQ==,type:str]
+#ENC[AES256_GCM,data:IfUl+8JYKPd0g9mfS+3kzS8/QzIDFgP28p5Z6fTqOAfehO5Nf5c=,iv:myhX2cXIate+IlC/52eCZXptOtimKO/o4usMnShrQF0=,tag:8YW3gtuNTfgiKLG2cocaWg==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:jexKYPS5LNIPCgSzflIdtOMeZIY=,iv:clbWAWtYQQeUoauFs/z/4RWuKIEIDG/TtlRvWMBCc5c=,tag:ahEI84YVrk4XYnc7N26WoA==,type:str]
+#ENC[AES256_GCM,data:yS3MHxAf0Sw8m6/HDA4=,iv:moycw+AhiQZdI959Ncd6KnDXFpqMEBcRiy4WT/LuowQ=,tag:Pa7KUejOw9ndzt5VPGajqA==,type:comment]
+PODNET: ENC[AES256_GCM,data:irTm/4vXi7qKoASJiQ==,iv:opn1QR/tRapNO7Dp5w8bErjMdNhu64f7nu3zhTuAxbA=,tag:l+c6YuXHTKtgzZH6ATKvZg==,type:str]
+SVCNET: ENC[AES256_GCM,data:+PNtsSWwTnbc3wv87Q==,iv:oPdlrY8ry/FHqoGHGJn/MFMfRzldt2niQNR9YR1JBP0=,tag:Ew50NIpXz4kquINzMH1eqA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKTENGVUJBVk5RRWd3RXhh
-            MnR2ckNZTmVqbXdkaHRsM0JTVWJMc2oxaVFVClRqVFhkck9HWm9jWmhpOUhSU0tI
-            Y3BaVCtCSmVMc24xeHp1M2drMEcydGsKLS0tIGhqbmY1OERWR1p5UUx1blFDSzE5
-            N2U0SkJPaGtvNXBDT3pRZ2RiaGdXYncK7ndoMOSUl4DwAg5O6srV6H29sqXi1Qz1
-            x1/KEns4JEnajQQGFDmZrFmKkMt7ilE+J/z5aeM3YCmpHwbq3Q4PfQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiUU1jQ2ljZ2FFdlJMdkhp
+            YVpFekM5MzFqQUZrUm1DTE4vSVU3WStjaldzCmR0ZkFBQVQ4YkxaaTVteWZuWDdL
+            dzJKT1BhdVQvYU5iSm12OGNCczVwNE0KLS0tIDAzRzJDNGN2emovMlZPWDU3Ykw4
+            dkNjUThvMzVhaHRrN3FOT21zdjZwVkkK45N6RvVuQJvXD6XSBfDDtBCPEntzInWH
+            lbAVd56S4iB849iiV1bc/yNEvUwT1lPSgyVJXujsLKoRKVwaf2Zi5g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-11T01:16:47Z"
-    mac: ENC[AES256_GCM,data:xEyq8p1OIz7dpLjELvzHV5aWvU3ZkaGlOvXB56mBcDBBUv4rmE4CIAPoRzL5wMy3bHiV/2CTVAbtjsMdQXf1hw5Nn3ZDtk7SNQfBKwRy84oi2why4VEKHsGsHERAlEfZgFwMT7M30kpj0XZmhL+N0L5oanzqv1zUvh/MaMgPRKU=,iv:vzG4+uXtkJ5tTn9qyYpOeWOsmBYt1Tp05xFjHlbX5iE=,tag:TEHCqNg8FDh5PVnEjPbzZg==,type:str]
+    lastmodified: "2025-01-11T19:36:14Z"
+    mac: ENC[AES256_GCM,data:YMlLPPOjs4vfmgwuc/0Af2wVvZbPrx+6PxL3U0XXQ+zlyVBSTx6NiLzEqpNxsT47QgcaZY7MAYFWytA+6Q7GT0xoHI6VxI/OTvUcbLySUhnMuRMW+DCshfLCjxKFUVcr3N6TQWOqQrZ35/5adWtaAibkTTqSug6KmWmJ2y0zX9A=,iv:bLEVMU2haZcpbdrNHotz5PvLEY51761IlKTdM7VTyXs=,tag:d785uS5bMprDV3adrVuH4w==,type:str]
     pgp: []
     version: 3.9.1
