--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:YOIIIrsE4+LpaFrrBLa/U9aJV55bOYmjGVFl6J4EXSUNrY9WHygIOeC4Er85nakexkrroE1YIDR19/+Wq8/06EU=,iv:Xr4Rfa9HDGeIZ6fNE/4EFOoA9k7lj1gCFZlYVKLCFeg=,tag:856yKn8KuvnojWquTUhlcg==,type:comment]
-    #ENC[AES256_GCM,data:/v3tTOPeAxAKXP/JhGC3Gg/+NH28fEO9WuhXcMpGg5+bAQezDk64Gh3feeA=,iv:P2xvHpne+qxjbiIEm0xLDw8Ucn6/CmKIxkeI4dfQDJM=,tag:e1QrohU6ZOFycxtXFDfPfg==,type:comment]
-    VIP: ENC[AES256_GCM,data:YgAklRdNeCQaZGgbUQ==,iv:GRPWqCU3rFF41dFvVEdeQ3+pOnYzALl/SUQYwCryVBw=,tag:CCMf9QCSSlchGkYwT9awAg==,type:str]
-    #ENC[AES256_GCM,data:kIj4NBJXXvlTW2R8WhX7bfRMs7QEOr1eb/uV,iv:jAA1ynKdIxnPjQAxdAzSHGq3GHhlNEzne0CunJVQIM4=,tag:biTrbk/l6AoKX2BbZBIhiA==,type:comment]
-    #ENC[AES256_GCM,data:+Vb+7Tgchq3l4zf/zXPmVk+NoCTBltd5/GOaMBowsI2DmDLD8x2+YGPV2eVJCY6j0oiiI/BzWoax5/blvj7/q+dVfM3rCXB6ROEVY2tJ7kvrWmLvEMf65wo=,iv:lmWtT/KOZ4pDAHTd7QRHVblrzynClBNSiIJ15Yp03CQ=,tag:uTRt9wBnGagQJ+yV1pXvCA==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:qWFZM1SqZ9MEd/D1nGs=,iv:nYSqxUq1OFv7TVq2iEyeeRVhsEilfhksnRzTPDfvc8U=,tag:Lib7HjnrH/tT7pnivll3aQ==,type:str]
-    #ENC[AES256_GCM,data:cJk0hYGPXceKJfdBzvd4Hy9h30mDg6vdXU7A0AsexQvT3g==,iv:M7WGzR4N+V0FyG4yMGzSLq3X7yjPwfNEFsuki7NfHPg=,tag:gG60rOtGgs+Glj+qrrFBWg==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:JuEWyYGHqZoRPZM0bQ==,iv:kuggdY2Hyhtev8VKW3QNQKKMhpL68eLpQIHGOY8Z/WE=,tag:mGn6gcrVlY/sr6r4qt0zeA==,type:str]
-    #ENC[AES256_GCM,data:9ZiJ2dM2M82VrtIDwhDJxnCpGq6mxgrZmzxC1SCTATbzjbeRpSYqSjK6M+axBEw=,iv:q+glcZ2hSF94SHNAKXC2cPztjIYM+qH4qCPd4BGeRek=,tag:yPUVVg1vM5wYFAx9+MzKeA==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:PzRy0fMnk7YFsFj96bvWMNhC4DpICz7+5O50YyLhhg==,iv:iSRLydyZOpMQL5tfEhxWNw97o7r5Ebw6k8q0utgUkLo=,tag:HwNNlvZr1Gmq5VscjLaLMg==,type:str]
-    #ENC[AES256_GCM,data:FsDpQivBGgGWrTUuuU7x+6LX2SgMFYNbIi4BxvAk/Yw1026yvvsZ2zGMY2d79B8vTNO0VBQeqV4qSs/J9+x0iD62EyfzEQBpgtfVW03ake9Y1Q==,iv:JEOlz8bZMSzIr/bFaHtjdRufzYmC0v8t5ScmLdi5ECo=,tag:p/hFOaGkm+dNPU1ZazxS/w==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:tZyrZQGbIn/BNUakdhog,iv:BVOreKpU+BrI95fUDbySZdCPMCV7C7jpeS+/A8YMdUs=,tag:DYtQnTDInhvHuo3BSsusVA==,type:str]
-    #ENC[AES256_GCM,data:WJHS3KUI9ftTbloOiBHwX/AxStLvtwF8Nm4wRs1LPCif,iv:4+Ezm3sGB/sSELc2a3h9TiKwjyd62LgVa048BeqWuGQ=,tag:Hd1mlQTuL7vFrLxP8tYMTw==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:W52qgYxak8b/eKARdzic,iv:X3B9ltBSSqe+JTNkru4Cio5XWeI7PQ04ir95/ZC54Pg=,tag:3MAZkO3AsaNtfGff8+cSyQ==,type:str]
-    #ENC[AES256_GCM,data:GV/jZ5KyXLANKL3L0gyiG1XDWb6DVhpQZZVS+bL0q7MLrXKJc0pJhIPqIdz4bASakwTEpMO9AWH0wxfBZohLXHFph3nBQ+vYrg5xCjSxNLQ=,iv:VOg28fiL9gIaekOojQee5KS7DI/41JvC/+sU8NNTLcw=,tag:Am7Byx5QXPptt9G1wwPPAw==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:FvmjZt4cyFwZTddITtaG,iv:BOmIEBcYZwEmdSPwBFTPfeWuZE/4e38RSa5ADsrBEv0=,tag:BAURdRmAyVvXfFD0yXVv3Q==,type:str]
-    #ENC[AES256_GCM,data:ZMJxezzLk26H08tDAizHLQ68HTj3U0bwuFKbY9DpKSsjmwfB0nInq42a1geQ730AST5H3LMk8dQWnCKm/tOUAaatdG6/QScmezwhupzSXWz3KaSzRDVQ,iv:RET8Ekbh312cYjEO8Vtst7rf/5GYWli+j7OaPTYXjqs=,tag:vvHUvWWJ0R638ngDkmqsiQ==,type:comment]
-    #ENC[AES256_GCM,data:eW6i2GSp39uH0bmUBF7ly2RolUtrEEHk/Xx3UtrRORCrSDgufzZkwPfWr2Etlrl7xjTDXaJAWQp9nnmW7g1TkMao3nWMQ015NGLlWdb7dRZ4DnSWKwXyW5A834I0sigAsf5oWNCI9xbvxDu3hWOiYMSSaUff9HptrgSrQg==,iv:EhCvITH+9YTIN3JNZ3pGt4Qrs8SYHW1bAgI4nuA3Ox0=,tag:QcSIJx+vtTWD0QPczXwqdA==,type:comment]
-    #ENC[AES256_GCM,data:tC9u1nvt1sOaru/zBoaJ1+UaslahZfy+bJhyEFIOpPss01LUVLXSWuHxPlXdRrCTnRSmnnGSe3qV21mTxPo26Q0E9ctiaRbFHriEYlr7Id4=,iv:zHkHt/hH5T4ZKP1wQ9OyMJsTr8WIls6Tz73OMAfCgQ4=,tag:tHniYnw3CtioI+yvycxrSg==,type:comment]
-    #ENC[AES256_GCM,data:VzdnYL0dglW3VfP16dsISC4Cb97qeSuxxROubApzI9YStmjEAuUH9ZeMMQ88+IYxWzY2RBlu,iv:F6Z9C0G+c/QussJvAduTdhCVjfWwrcYEgfPGotx+FQo=,tag:USn15VlV4a3CHaCqtUrvfQ==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:lrIExpf1rNIzpYl4,iv:LMI9F3UJWIigVrTD/uThB1rgSl/IMyyTAKOdkjoPqIo=,tag:uaE3cmgktNc01k7QWsTVMg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:HFO89H0R+fssG4M7CibRqkU=,iv:K0dBZWHO/yHuqY6jYQ6GhfcDM5GWsX3lMJH27774acw=,tag:+/QY32/8jVR7pUDmguHpDg==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:vbN6+ofYh2SLdcC+BqmjWUuv1wBUhJghmVN8C4SFcsw=,iv:UD+GtgAOAdmwqfQ/RQ6C1eqhLZ+EqYz0inUHXn+Ol6E=,tag:QnXyMoQeu/M9PeJ0iaYhmQ==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:y1gpj6fYtYW7svl+WEh48I/0DsgcmUQkGar9Q9Jra3YIDD+CNU9hMQ==,iv:B+1d1wTmRGe3+eTU57z5Nr62t1qY/ugh/03vY9Jp8Uc=,tag:+Znxa6j+YwZv1eGau+NVSw==,type:str]
-    #ENC[AES256_GCM,data:Njw9IvnpaItIRNWSgGWowgLRIXzcHJe075gV0leRiXXMBQwyKh2/q+wa53dPAQVzUiwkJvRqbDg0sRGk7pcYpw==,iv:tvwah+VLC2vt//VfWbNp0kOE1/2xseJ/5f5+JN6754M=,tag:pmgPtGnyp8l6pNmgdsjHyg==,type:comment]
-    #ENC[AES256_GCM,data:XD4Tl2UpocoRErom47siialHECm/MswsGfwy9DuB4Pymk9H+QJ+d1Kpx9Uum5xd/7cfQl5M0dco=,iv:5MtpqXnARMn2ie2yLE4JktSxF/nd1QM1f3DOuGTLnSQ=,tag:whkA2LCNAywR7JsMU292CA==,type:comment]
-    #ENC[AES256_GCM,data:WgHeuT284x6cVx/4JrR+mVrmQh2m9X+NXg==,iv:u1Tzp3pr86KgUHS/GWCUFPeHSnUlwizhTRSer3DWJjQ=,tag:RFLtWUQvC596seUbVTio7w==,type:comment]
-    #ENC[AES256_GCM,data:XLTm2/fgbuEtHeM17VWXipbTEbBMQBSOiNJCTLjLGvUlcb6V1FCjH5JXAhFpVn14vbfEeNN53tQT97DZ+0+gSJ5y5OHX7UkkO5XoXdE=,iv:H1MX4V1X5PlcL0sA4Rq4zAeLbaqvz9Vh2P4ldUswFWM=,tag:Gu5AMiPZ8sfofla/OgvH5Q==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:0R66cfxOHGrK5Ir9feACSHkmfcyRIT6dy+wPGPIYYAPHUm4gbeEPcGa+0b9E+Krb,iv:IwQ9X+3ugTw19jbVUY0DaP1IHdtYQR1VsxuzPSESmAg=,tag:cINOXrjFaCv3aKmRSzvqeQ==,type:str]
-    #ENC[AES256_GCM,data:6X/yQiL1mNl5tP7hN6Ega5IGUpXVAMbmK8StmXPVaiz6mdoJ/DZJpYdsCzGAyO0+YYhh3iADyg1Dci0o0YFC05sTOEyFuDk=,iv:IHZ3G26xWwRQujkZ/pnIYbuhQI+8yNJNdEojFxs11uQ=,tag:1SYdlENoqg+EhWy4KiOIdQ==,type:comment]
-    #ENC[AES256_GCM,data:w/cvQKvuN/jb9O4s36Syx1nJqbouktZ1RyStA8mR1wip2X1xUnOnBPb9oto3NsqZCPRVA8/M,iv:RlYBcbBROrI8ieVzxMO3iNmDu+5ROFf1WnMDIEbKTS0=,tag:4zy/NJKpfPi+Ri6acgffWw==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:EAHKudWmLA==,iv:Musi4bzYPnFwtoqIc7V1//REytmpUkeP8D0MVs+EQY0=,tag:QOVat9ueqQtcqAL9Kg7UQw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:QVjrrY3F6K51/eYKDVkDA1inkSQ=,iv:80YJXTjHJsAGf/jMTPmU+N3TVDMMxlWdMnj82rqGksM=,tag:+mECsvKZ5eedqegpplJ9GA==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:kdhDW6dauePoqnQ=,iv:YDJEL2MTowbO7upM+SlhHrHomCAAZ/8o2367DFCZuCg=,tag:5YQ75yMJiQOtprIJVTNCfA==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:J/JFUgte1oyy+zbfgCgq,iv:hyYNhgsLKejrbX3qyBF/STEpY6bdGk/6tDc1FMzvMfk=,tag:n8ZcWtM0sTorHn6wVRBPYA==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:Mgmw+DrQSA9PFLFEJvy9fXD5B+LsD2XJqw==,iv:MiLhpkl57RqAqTC2G3o5er2tALgeuAbBHLDaiaNeF4U=,tag:BSkVFtA9KCR4K74vmKZHEA==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:2ID5bivBCMRwk1bDwE3KH8bzo54nvumA,iv:u7tGa4mhhHg3DFEvGXop9UC8EChGLZme1/Z6SGwDBRI=,tag:qzIG0ofN9EBzMZHgS1gFAQ==,type:str]
-    #ENC[AES256_GCM,data:K9NijeBmn0WYRamaVGqXlKzIRJBKlvuRlcJ6O3peaw0F/mGHDLw=,iv:F71pvvFE6Ien5HUTEJj5dVHwno1O5Z8bKi94YpZgJvY=,tag:HwyS4Kc0CkehkxA5CmuiIQ==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:Sbm3ks47zCixTQGyt9AbpobmJDM=,iv:LC/gJnhCOcyhoCv8ecYjVeRy5j63vc2WkIcp4xTs6Ts=,tag:j8BUSXDIXDlv5bHRq9XHSA==,type:str]
-    #ENC[AES256_GCM,data:SQQLrfcz5c/NACVa12k=,iv:jv2wh2YuYUbMuw93ffq5BE53rxtnsNBm+s+FG7f+udg=,tag:UX6yowpkfYQKlYHczeWJrA==,type:comment]
-    PODNET: ENC[AES256_GCM,data:K9Sn5HBdFUfSMvbC3w==,iv:saUBxQhmvYVTJPTKH/8yG7JdSjhzI7/lYjfbBpEpFiU=,tag:+usjezwqUL1BfNsETFOuWg==,type:str]
-    SVCNET: ENC[AES256_GCM,data:H4NYmXKRO1OEzeugcw==,iv:shgBnKpUURrWZjLuDiiFVuhywyqbuKiYv4ZyjHZk7Xk=,tag:1Lp7yXsJZHEKQRxZqEGswA==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:RPO0Uw==,iv:D57bgq3G6hEk6gSFJ4JZU6a0Hpg+NgNXFavGGXvkFvA=,tag:khm49byWI5yxN+854MTGWw==,type:str]
+    #ENC[AES256_GCM,data:kBpfJQR3KjmnGCLbACXqxG65LRkzGzsBsLpXESw12hr6dpIeUuWiZ46bbkTjO2WADqpEkbAAzMFaCSj0wGm69Ns=,iv:Le+2+3CJl+rCIgxutQAi67mMThf9YvTmSypAjfoIR3s=,tag:O/4XTBBrKThSY3i5kOvx9g==,type:comment]
+    #ENC[AES256_GCM,data:w+LhYNQWpHzblPFcP/p7Edt/Ov+QQl/Y26cxxU+uTbr8S6iWANCjK562p3Y=,iv:gNvji70jDlGXaJuxDMwRMBqgMqH4Wd4SDVb31G5NElo=,tag:HMSt+apreCBol/B5ogWPAQ==,type:comment]
+    VIP: ENC[AES256_GCM,data:ddNYFRaXcb/O2qAs+g==,iv:HVpFcPtmJrRikEFL5wpZSRcPmEmv620C4ti2m0HnqMQ=,tag:7VDCR0okLATCyg8zHWGVew==,type:str]
+    #ENC[AES256_GCM,data:C1zV+Q4GVN9EuJ76j08k32wjIlCCm6/f6B8K,iv:j0a15U8r8Sqioa0+YqP3FzpzXlNIrs0pwiM/ZGLk9/s=,tag:u1evr7JjfYQovKwxnx7nkw==,type:comment]
+    #ENC[AES256_GCM,data:uXnTTyTkqz+PI2vJbivEO4aWGIYWZ8K8er8zAVcXFwcCtaeMt0eL7gAHMnqF6O5jwSzcwotK4aH7c/jJy4s/mzyrTRx+uAXNa4I2BYxSY6H8wGQdtv53zxs=,iv:H+T8GM2+OX7sX5M9wBPrnTGYh4V3YuFEOEF2TRuFXEY=,tag:14YeHTT2of53wsN9zC9E/g==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:uQje6ZrsmlWJJ51uhdM=,iv:ttkXW9voEKwRS2dm4uyFLiav6kTol8vDqtAgguJKAeU=,tag:2u4aOigknUtJFjn0w7d3LA==,type:str]
+    #ENC[AES256_GCM,data:uA54AV0xMIqO+BZ1Sx6esp2JK0yJyCJtArTwANkqf9Roow==,iv:vpB1VCaRMRqy7aXHylKvhOMI4kArzE4LbeJamqoowF4=,tag:M3tP/MkwD1jTmEYS5Kz9Fg==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:vJQHMqeagq//KTPzww==,iv:ue65rk2ywJl/AGowqlUpUh0BxtXQcsK52+QWEaJoMTI=,tag:9xPb09zMwRscIlURkDFuIA==,type:str]
+    #ENC[AES256_GCM,data:Nn8du39sSaxFVGyx6jYUXe5EdnW7MHKL/QqbXLgYb4jWAljvFweWh3sjxc05HkQ=,iv:s5Zzb70F/N6fuwz1+EZhST3HxhCmYYx4raTHJv43FM4=,tag:jSFTpUcfyt1g5CACce3VRw==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:wQ7D10WgAqaowSxoBaqO5I1230PZnqnyWBLiKRKowA==,iv:G49yh3UzfNpUohP8VxGkz2RLRiEfD3pMCFzBNvBO3wg=,tag:X23LqyEuI2eGsJeSTzOfWA==,type:str]
+    #ENC[AES256_GCM,data:PCtTiDRApdvyg+5NhwhrD75fvqWpqVT1Bzaw2ghPfRngjXK0PHWBvP5z58NuDPqb0ujGTDbQ5cmcmogI22Rpb4vkX7HpfuZZixZ+MUQDCWyLwg==,iv:fwHx6XWYUn3BG8+df08qkwxDrkG2c/veYd2o8Fo48m4=,tag:Sa/1xVaiwefIo5M+GRkHdw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:JXtmpuMHgVzOp/Rk8VHk,iv:6KyyrYrNGOJOwIt+Np+kXw5Gh28zz2zmJozY3RStFc0=,tag:FNqNIspDS3iuiCENQIATiw==,type:str]
+    #ENC[AES256_GCM,data:FtF094XkyQGAMdeJcKuDKgsFnKn9XPoKb/tC8LWrPnSb,iv:ppvZ+xtFYdMKIISJiPNhBZ3//JmE8N2nObLQ/OVdie8=,tag:EzYoP8mnqZ1AYfxi1fYsOg==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:ujaq5YCeCNzY6qbCuyli,iv:UqyV0Ew411YSC920r9bkciW9ZOX12HUS9sZMzmowHrE=,tag:pUHvKLX349y4R5U03O+F+Q==,type:str]
+    #ENC[AES256_GCM,data:TR6VUpewrDKAVUY5IHwG6pDej2SVZhbBOP27a0v7tA3wzvH0tl3pAJgafW5JLf0IXzBADc2MhCJBRzclR2uwsYGMIuMV3O2Qkh1cAloj0X0=,iv:3xGookvSW1FJfw2P17GQg87Hn6vh468lZviEsAvtAfs=,tag:FI0WLVjXUTL50Vxl41JdsA==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:ZEopu51nvJKzAB4s7o93,iv:df7ULfqZYMskHmVzMIsJeAnGhmaDSvqprjDNVYIxmP4=,tag:Y4XGOm5HifTznRpD+PkgKA==,type:str]
+    #ENC[AES256_GCM,data:wPBsJji1xxy63o8pZKrTU+GyR9yJm24Wqr3utK4rDtCGA+nEh530nRYkMKY55WANjThi3F2sor7bnuJ2lr6Fju2Y+USNMwyaCs+GIfuq77oS1G26JBwY,iv:1gc5LTUxWbkQLuui/O9MBrvdVy5/BqUj+hz9T1Nu3FM=,tag:mhJyZ983b7YsNx7M0b+xiw==,type:comment]
+    #ENC[AES256_GCM,data:aI5uE7Bv0gpSunldiA3hNoMnBLkCj3/JdjjtdpJc0s0x4STJ2iUjKVN/7e26TaWEn2jh9ljFyDh2tV2h/p19sMnUuNnGLdI9q6LxOr6lcANMw4BUHu6N4RG4agmDN7WZsDso6YGA3Qo7YnmeVuJUsNmcDblhOypCxCjiMA==,iv:dD41xJjAmIkr1Em+Wp68qVz0o6S/Yp0raczL8exG5mk=,tag:dSZ16BLve1K4kRw9GiLUQA==,type:comment]
+    #ENC[AES256_GCM,data:fsC0ukI4yzhWLC+nfAtUaQrhnMgofDLJq1cR9s9Lu7uurMTc38EG3kCpCUnxM6Gi30mxFACADZmMFTnTnGshkXx0nHt67ky4oAL3ysYbhHI=,iv:Q02xQ6qxSXOxdCJ+6N0hweioievlicCIFt6pJBeOers=,tag:RedHo6pnnLy6ii/r971p3A==,type:comment]
+    #ENC[AES256_GCM,data:FDWECjZkVvSuvxkHNMLBi6qnoTorne7KZsiy+yWTxppjsiprphJltZDIBtymqpWm50yj9ixh,iv:JBVKFLgtcNTSnEgb/O2KOu4psn1ZqNrZDa9Ggtod3HY=,tag:Fi1GJLXf/S6YQr+ZMWb5OA==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:UW0+0tMai00otbqi,iv:bveybZ9xRT7eFrtb8EXqVaFpnc9l7BR0q1I3LXZ7Kgk=,tag:v6QEmNgTL4bGH7sKuhRQxw==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:mUkfjw/Xzzj+XvB2H0NrMeM=,iv:qj5CVXPJdMQs8T3NawPeitX2d6yqJAdsiPivFblSFu8=,tag:3qfkEUtkj+ytgX0GRIxyfQ==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:5JfVobxea+qdObZj+vXGFdDcN/3LI35Q74zcnaJdgwQ=,iv:xIQrS6T3XZxueecmAN+i/OsJY7hpL+eOuWFMr+440CU=,tag:JMKXtoIWta2PJyCOP1zwSw==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:+sFbMu+U9Mw+8I+NZpbgRv0cXtEuY3Lb4EjJKbSkWWiEQYQyCcDerQ==,iv:JvMTiQwROG3MIxgbeK/2Juf0sTmTlOy9YUYCtiZuTv8=,tag:0cHWrNRbPb25Sci8AHEvlA==,type:str]
+    #ENC[AES256_GCM,data:qYeCx6uCjGfkjpNGGQuxq1eWjgr83qJb1SxtcozcVEpP8d69G0Wsc4i5MdDfC8CTFuNFNM2Bzj7UjWfipO4U2Q==,iv:I55ZzlzCLyPU8tS+kRDq58XtzTglco8g+nr6+Cces6U=,tag:5oiRbHrH4HT08Fu6xwi2kA==,type:comment]
+    #ENC[AES256_GCM,data:FA3wbL//6TS99N4Pa32clA8D+VB8rK3gDCiMRG/RGc86RPeZ3Z24bcsJKOobfi5dokyOmaP2SBs=,iv:u3wtBLYBe3TH9iR8v+8GSLfn/8qom2yceVxfGHK4Wms=,tag:VGfnkpZAGwtSyaZjt2SSqA==,type:comment]
+    #ENC[AES256_GCM,data:duD4GELTpCZZ5ADgqvFXzAK2Z5pd1I6tHQ==,iv:59FOp30a5TsTpZCVA7f5O9HvSeqDxWSAOYmdgfjAHhM=,tag:z7zzvDBLAOfSEqzXilTPpQ==,type:comment]
+    #ENC[AES256_GCM,data:BguHWkbf3YAcC6MNcUJLTJBHKTxnj4FJmCEGObTfBSREoSR85aUauIC+QdExe4julL0LSoe6b7O4U4EcllK4DrBT3zMXTVK4FFEIedA=,iv:ASra6UXDoCtVPovsP0jC4fgodf5Pm1x3BsjebO1yru8=,tag:angXvmwFbLj8dENHR8fnFw==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:wFKc0+z3sYx1f6jHAXgO/vIfSgvgKUMT2gQHXDqfCrCQHEK3oAYgUMD/x0eCQk1m,iv:77VaXoGlJuawPtIBJJFwX/HBN++NP1SuDZkxCE7qo8M=,tag:8uBjri15udBcCUjFzlPHKQ==,type:str]
+    #ENC[AES256_GCM,data:2NGzhbZS5kaOmbYLFCZhQsuFCOCCe1X66V9phht0QViJ54cRh79W8RXZlAYW0zAETW8Q8A/iFQv/MuHZDDdpPmndjL9zFd4=,iv:nOwRQCpW3A7oA104qeBYRjpP51EPMVo2fD1rYAYJGt4=,tag:2xcRBDcBKvnrMMy4f1G0Ag==,type:comment]
+    #ENC[AES256_GCM,data:ynhW+qBU7xcgzMdHFVtEm7eQHfGRl4tFJpp1p0JsQlGRwy8zp0O59FsKnlJa/MQjRzilGsR8,iv:FHheDklBSJEN6cCGHSy6+xAgfIJur4tm4AqPUHIlUgc=,tag:lAoBEjasiWLe6hf+XTODPg==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:28ZsO2ANZQ==,iv:DUfI2r7OvR6slO1Ak/w8iyPonBvqnurPd4wo5FU6NdU=,tag:4ghw3sp7ke8o75DAj7qksw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:IeYVJQHHyrYls4cNs24hpemHbYg=,iv:G5O1lvuzmh2QRODKuRUMpcJDkWGYzOUnBjqqm7i/nS4=,tag:tkP0rp+OE5ccrnTlEdCsgA==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:oW/x3b9jnbuEFt0=,iv:ptOqp/a25GBjZMTys4HJeAbtqYEkzHOC0/h13HsET6Q=,tag:Qn3nr74HYY8csrk5Cb6R4Q==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:1LO7ezrkhPvWcCqPhamt,iv:QHuEVewliKW6g+/k3j1LvWnKVsC/AY0WMrxkUtXvegc=,tag:5W0Z5xvZuicmO5rijIph/w==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:eiIAXiuFkRn4TtqKYxMPD2XR7FoFCIqJ0g==,iv:f5d2RDiakHgo6dpgrOpu+K8VvXt2JROxgrSmvo8olKk=,tag:kwGjlF+UCBQcKvvtdwv0eA==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:DcgPDvZaYMviz/87Oye7Fo60kwtwpkIT,iv:5lRnK6kwriKf+DrbuxQ5Q9WJUnO0xceZq5l/5ls1k74=,tag:IqR/CTsqh3z3rXpEr9jIpw==,type:str]
+    #ENC[AES256_GCM,data:KltipHbI9eC7W3qs/j1MMPuizsNP95kEamNUG3T04TZ1ZqL7qtg=,iv:Se41qkkie6Y2rTUy2CBAAz1L0QNSF6uIavrTZPXAFu4=,tag:2aFvlTSAjW1QQwsk0K1jRA==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:ec5gBJhz2DslsUcPBU7womYN2Xs=,iv:I5Pcr1fIcoEo1lRl/hUPuga8CMFg/D2mgvKXPszEwjo=,tag:jbliMoL7nob1nqwjp/W2pQ==,type:str]
+    #ENC[AES256_GCM,data:Ep75XdCttLrjZFKqFRs=,iv:3M870auiaLK4l58E8tl4sOw+ueWDrwfODqrJ5Q5FNSQ=,tag:rGVNoEMN/9REpnBTVz6EKw==,type:comment]
+    PODNET: ENC[AES256_GCM,data:CS1v9+JlNwwKtgHbHw==,iv:wr1NW9QAAEX23zeDUjp76SpWDj94Y2B7Lg/3PV5b9pg=,tag:d27AzUhWeEMw4BhnSVeydA==,type:str]
+    SVCNET: ENC[AES256_GCM,data:g3KMQ/K5y2Glaq65tw==,iv:2udndACvrbw/ssetNTksZzEqETU5Ym9Jd7QvKkB+fuI=,tag:pHk3gBZLs5tmsJ3HymNsiA==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:D4WAkA==,iv:qR+QZgrB3BVcoUyB36zHzwSm/1tBcA1CdsKd86HUntM=,tag:xFBJj6Cei9TvuzaHwwjDMA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJTnVKcEFFdmRTWDl2cHVV
-            cEQvMEROK3U4Q2E1MGNtN2ZrekpBYmUzalZzCmM2ZTdVWWpVNE9xWEpiVTVxNU9Q
-            RGQxeEs5N0I3UWJkenpuNm41ZXd1NUEKLS0tIGszQW80TFluMVBCbGNJTWVnZXNI
-            czVZekRsQ1BpRmZwQW1WRkJwUzR0WEkK0y6Qwdjzuz7bOjj5U+t7EUCaDDKryKJo
-            0K/qtpeo8UQnsisD/UsZ30FBZF/6ne+jBfBiWVZQcqReNXpF22y5sA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiaTZFYjcwL3VQMWMvemZn
+            VDNNTXdUTEdubW1Pek92T3NralYycktRSnpFClh1a3oxV2ZWdFRQenF1ZWhnbU5O
+            MGZoR094UGQvblFuV1BaTjRiVE9pcjQKLS0tIHF3NmkwQ2h0a2wreDU4Uk84MWph
+            Zm5DOWVRd04rN0hXbStaUEhvdWI5bGMKaXH3kPqItNBD76VFyhduCmhCDRlMXySg
+            LRFjQRONVAGoiLgO/Fbcc4T38XhzErxtujS/tWltbAvKmcUWROBFZQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-11T01:16:47Z"
-    mac: ENC[AES256_GCM,data:JAkBPgkaAAy27graPCieDGpVsyd1k45rK7tdtXXq3tLLZX1udN1h/h81mjPhcD/Osu/TStCjOoP4aNJXR6e9gFkeNvRnLCfdK+Su8g5hZ2KER3Ee1SbY88Gqz7WIgfNrfF1s3XuTo+IcoZVLGjI4yBsXFw8x9l0NC6RcGIDf3ck=,iv:6uzkQp6jaV/cvyHKNCbuVytm4LkAphj7ro3kjTbA0AU=,tag:ZLtgzkNRHJmgho+wj+tZsg==,type:str]
+    lastmodified: "2025-01-11T19:36:14Z"
+    mac: ENC[AES256_GCM,data:QwU2lXCYR+vrjaQ1BhZ2xEY4VRshZ+bPRTwqebwlsJMrM819RINsJSIvPDYmHOxKhPypVoOaE7xjdJdTZyFO0G8HgVtAp5b2Vwq8UzG1fp0AaUYuzTIjSC2baddrauUSZS3BeLDLy7oRDhWZB0+dhBSm6IeFYmjmnJmSCYCXzTg=,iv:i3MmpF4Ull4qbVsfur6jM998JgFZ+h8Uy+R9CYPWV/Y=,tag:tRNigi44FEb8kgsD+jTEXw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
