--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:UejjHCHlgFH7rNDGMVpW9oIIMiOkSQWqL+IsgUXUi0RX/aXPkGizWGzRmYnITvdjRdb06p1yzEXNpK/+HvXUto4=,iv:dngO+nqkdTQYIt6wb/Mp8apCwajw/3uBz9ybL/mcCHA=,tag:547vV5ClW7Jz0MibfmUSBg==,type:comment]
-#ENC[AES256_GCM,data:Vq4mjz2GDg8GwFQqFDb8APZ4N8i2vKXPL9x750oqPRFQulMB6M7/mjnjdzk=,iv:X3SK6mIRKeQ147yHjU54XU753s4ZAbJkjAEtZO/0nEs=,tag:3c4le+2V8YnQMukz0Ggtbw==,type:comment]
-VIP: ENC[AES256_GCM,data:Re6qUfDt7GcvfxqBzw==,iv:spIQExPnUuaYsOmA72byFGWJpedPMZcgR91k8ZOzNew=,tag:ZXah5Gja08/dgsDDQIac/w==,type:str]
-#ENC[AES256_GCM,data:IWmBEkdAefCv/X715rR0/30QvGZLtpDt8vHx,iv:U4ZxXEw0ODZBBELXAzBsEbsjmSBciOV4vZSoJu6AF7E=,tag:l3doSLKAlNocflv70Is9gw==,type:comment]
-#ENC[AES256_GCM,data:cJc9PPerCmij55un4fWkYYJk4c7c1hLSq1/qQBtanXpj3UGK9flGSzq5qtj7Z9bvl7aQnc1nks+K1oM0tPXOH1WOC/+LHQSW9Ea7LXCzONdfIbMeP32LYiE=,iv:XMXqoXpPVV9ZaOXNJpTWvit2RXGGw7gC7lRYsYocEAM=,tag:/DDXVcH9p29Y6R+aifeb+w==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:i6uvTg+TxuoSHHT1yac=,iv:iJrWUnV9TBP80Kz2Rs0ZCj6wP72viBe7VUfetj+jXBQ=,tag:v3rj0wq9rTR5RKRGCQce8Q==,type:str]
-#ENC[AES256_GCM,data:gK6oRBq+cG+/9qj6UlnytBkr7dTeGaJW//pZQ9StX+mLrQ==,iv:YoK/TBb3bVrtBQryYz16NYekDJGQSvQDHvAkS+i1f7M=,tag:DVef2r+LFkAW6qAs8dLrbg==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:eOczNk6qFdcihe1INg==,iv:wOkfIDElKgcD2HDTSk4bjBnc6ToKyxR3hkUBj2bq9Rs=,tag:1f8rrHU02N/pTXZ0eyTrQQ==,type:str]
-#ENC[AES256_GCM,data:hyvmDw6ze93tCRelMwNtFaA68MBSWj/6AZYpdeXPkEKKViYvDz90ULolD634tZc=,iv:7njvcQ9Su5fQkOmQbswyn3uupSi3/C3HlQYN5kDad6g=,tag:J4stSZAwRml9mMeGhOAbsA==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:dRnwIgG//ZvFOXZ/DoUYKNm+S8Ysjo7aUpNX1uHZQQ==,iv:1xzzOY5sg8cQiBRLPmWc8OjrJZDFrACG9hbKKTnPOKY=,tag:MTqq5qqddMYGTqJbMG6etQ==,type:str]
-#ENC[AES256_GCM,data:W94yFa//2lWgsde1J+tLekahM/BiOODkZnbcOyJfm760popSzXxsF3T9cBoA6f1vTqa+25BH2ktk3iA0jtoed4jQi39aQojMp2l/YyDZzCfwgg==,iv:6D9NsA7By3Jv/NXvX8j664rsKN+OzTJWp/8CzQxmkoE=,tag:5nZiw1UhHWfXEV8CWNDs9Q==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:Y5yT7UOSh0aO1b35drz5,iv:iAU0Kb6BRdTW7c3EHy45V8BcMvwpPhxT+fQWR8FdnMQ=,tag:oTQaW3CTDfj7Jeouuv1dQA==,type:str]
-#ENC[AES256_GCM,data:Z1E0MmaLcAQR7UQpjSV6YshwW/ZL2ySIchFcm/nzkUCC,iv:UPxLHvW4vh1MYzlmkI3aOHxjMOD4DcQluM3U7pPlZM4=,tag:tQZTgtMGZ6a6M7CxCP3s6A==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:kpBmPmepyENfrvw2qFu2,iv:qOWFbI4UywnRveHmCTX4RCFTp/PZZeigNfFJTdE2NPY=,tag:uw8f95DNvkYiJZ9iEoon1A==,type:str]
-#ENC[AES256_GCM,data:TriYczrRYCGg+gibCqkBIlZQxSr1enAmkzpqCtSXrTCqA8ucU7wYzY9LODyT+CUpBTibXTgnt4l1jj1/tca3b93V9LObM19g+fRjXFSnq0w=,iv:SziwzY4iyRpzWwUPrn0wlDGCFBRbpToiGRAEPJTn5lQ=,tag:u8ep+mDe2sZ00zNr8gnDNw==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:MrTVsy1EeGEUMsZWFWm4,iv:9aUJ823F9V6H9tCyVSn2Ckf1/UtdUc0TRqVqwEB+CB4=,tag:w0QFsNiwnt8FyU74+YyMTA==,type:str]
-#ENC[AES256_GCM,data:ar7fiGgsHL2YtulZD1edfXoLBXpP1bogtX9tzEQJEpL1Poz3QqQ7vGX3vRK7rNiRhWRcwUIhN2MuJeuQ+rEqNpcH3AFFey4wFNddyIBaPj8iJ5ud+uq0,iv:hkR9cUzIRhuzHg71c1/G0J/mlNex4WY5FRMMnep2R5s=,tag:0tGF3bIqr0ZdPjuuqFEkQA==,type:comment]
-#ENC[AES256_GCM,data:C3KfnN+RDC5KUXm5WQNa/0sjkm7TmNw4petYTl8KS3MIxIleq/bU3AN8lIw1qAgye+cCLDBKlO3Fzbn8rcb7mLx6fLUtP5Ox1euD2tkKf5SG+YjIK2YYGOVbK8xUx09jhhJoxf8MXXcKCKgD38E60A50Lb9VcLTSNGoPJw==,iv:R7CFABKIRR6mB/CRrxLi5vvKVCwifJH2iZu0dmWcsjc=,tag:nn2hK+HOSOaJJlH5b7NQPg==,type:comment]
-#ENC[AES256_GCM,data:2JVDxoIs56jUDUrH7Fb2/gLTjvENNLZLDDYZeD9pTDbJjJunmlGavYA+M7rhpeUBTfAAIFshYtgzdKAeQoqFKvKokgdk1SHm1WQfiUVYX9Q=,iv:ghQHpq58GpmQ3MUa4Mu+dlpZfB2hYdYJ2zRAJ62wB94=,tag:jJB++6Iw7lfuwq16HOJAGA==,type:comment]
-#ENC[AES256_GCM,data:4EVBB9HlKBCrtKLvYOnULvjU0W6QOiESFwiP6eCWcx9tOmri0I1FfP5lsSGcXuwR4s9jc5aC,iv:7Uhl4jSIPvqiEW90eX5lMiqJTaGLTms8OFCtpO8WBUM=,tag:W9HaRlURYoGkIQGHcd134Q==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:WAtcg9bj3avBAQai,iv:BTTSZZ4wL68jHLhl98oXWaXWN706vqvI4l/dTK3hOxU=,tag:tYp35ptXv6tpdka/FgWjvw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:3lvkzteoRhwpl3I4YWnPFcE=,iv:kcp1xZI0M69/1fCncbSIdbyaCMTRTBO4fFFvqzuzsvw=,tag:9JgtUHwhh+72fky71zczlg==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:WR1XBkg/gy/JQCn4Qs/ReqwBUa3nn7mRPPiOZ7ANvrk=,iv:dAmnvDaB+eO/KwlIelXGiTam4xI6nvaDP7WPjZ12OXQ=,tag:7YwIY+V8JduAMTSOgTjTmA==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:FYclvxV09u93pzvsnDewI0fk/mCYgJeOa3akrHmp6QjtDmKRe+WQZA==,iv:0zcTBqLswRYHEwL+gWNzjD0BuVoew4mmaspS1eYvS+U=,tag:lyUGfobgVxBDVXKL+Zowzw==,type:str]
-#ENC[AES256_GCM,data:QjgqXP7f/1etk+Z5LKocaGKwAgHkiQNbSb5XCsOm0ykJ/qDNXfSY9gfYvL1yXZtkuHThzp7p3UeUX3N5E5wGiQ==,iv:lJWql1OdLf0T4J9VvyRKNmg84jAceth9Ne7OXA83msU=,tag:bDY9HNeGKGgIJ01uW6UizQ==,type:comment]
-#ENC[AES256_GCM,data:m6g84V7wcgO6FXsU2kxFCDVwLJ5fT0PqPweBwWmNW6E61lng3y1a3wWtFS8f+WQ2Hn5oKjpjeFk=,iv:KKmgVGf5NUvhybLaHkdzibs32ZF8Ppto1FTlyBp9N7g=,tag:yHfVHqpg07an6ofFhNxAig==,type:comment]
-#ENC[AES256_GCM,data:YWWBVOSmIanaiCETcGfqdKestflZ5XxgDQ==,iv:sGaUiVw8IGRC8Bb0AMl30Xav7Ux364nvyzmTKqDFKmI=,tag:XcPv+koirGebJpYIHSRcMg==,type:comment]
-#ENC[AES256_GCM,data:tNsuF/b10/ph9u6fKIaTzS/zx7kSs6b6mPE3M2IqntsLFKg3qDqTQNYolMCeClUMb9uSy3L4QDg+jl604eTSOWYoEtZF0Lup3zuBaL8=,iv:L5mq2rpzhxwqI/4lzBwJsWP+Zfzpv7shc4Vmpaap7IU=,tag:tBDUQaK4K0idV6dWEZuE0w==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:Ulszk1n8/DwcM74rt5iqUTuqyexE7ZgPwSWiaOHth/Unuk4WtsmLsobg+loqkr4u,iv:4c20Doaj9fj3o8bftY/Vq/+J7hTntleMDjWKw645sYk=,tag:3o9eExeTcjaIy92HrirmEQ==,type:str]
-#ENC[AES256_GCM,data:jh4THb2JWrxKi8hdS0G+H/AaAfK2aoQVHlLQlJYcx+pUS20UmZQLuumcamNmxopIa49nwfOqPjiQgDSKw+M53/vUhyUPTrY=,iv:P6yy8eE1gi7TXj3sqrcGAlA7oKNZzO1L5/iGIzZJgyQ=,tag:i4stzvuhxJeqtB/gafin0A==,type:comment]
-#ENC[AES256_GCM,data:/MuTdxLgWsr6ENHU6Sggx6RmsyJs7ZjNe6hLzPofC48L11cVqfaLyh47qkZHzmBIQChzXiVH,iv:Zp/KeYQQhIHDds/Uv6Z+ZB445FOveCK/UzUxdjM7fvQ=,tag:CgmVSOnmPYTDd+STQgwqgg==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:pKqijrTZ2w==,iv:s76kq+TU3K8VV3bsHj8jx1uibhGDOoEyYhdgxYCftrs=,tag:65ZWgqOwQE3ryw0qN2uPLA==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:eUcUjE0uvJC2g21fzg/NMjcZBiU=,iv:bFdcl6+StM1ib0zcI+zj86VkukyrwgBQhAWq0LHaCUE=,tag:zjZ5qC3H4tcrwzVXzxxkCA==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:fbtQDOoQnzhB9EE=,iv:3FJXAD8/YPDTcRgvRXMa97TvyFFvJFUbgecO3KuUbsE=,tag:NYfTASjB07AF2385faoe1g==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:NZhUIexUMTgGM5yxvEDW,iv:1gapXmcsTRSl80rcj92VxHJDQ/w5nRL1RRDYqa9mWmI=,tag:eeylwl5wTKXDjuw5wSi/Og==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:mUzVXdHAxWjplS24Cvsdvx+66+2DQJwBKA==,iv:TlObJTSDTiF8uovypCSfP3jEv8JyUoqvFjiTHEK9Q8w=,tag:9wjORy5sCzm/iy1/9cptrw==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:cvFWuYDtnRm+jPDO1nZuEHREtFRebasH,iv:jBy5c7o5t+QC2gIro9Jp2deiBxE7pT8ZmFAShsitCgE=,tag:cuDQmn6Md5JkTdoW25aMRQ==,type:str]
-#ENC[AES256_GCM,data:IfUl+8JYKPd0g9mfS+3kzS8/QzIDFgP28p5Z6fTqOAfehO5Nf5c=,iv:myhX2cXIate+IlC/52eCZXptOtimKO/o4usMnShrQF0=,tag:8YW3gtuNTfgiKLG2cocaWg==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:jexKYPS5LNIPCgSzflIdtOMeZIY=,iv:clbWAWtYQQeUoauFs/z/4RWuKIEIDG/TtlRvWMBCc5c=,tag:ahEI84YVrk4XYnc7N26WoA==,type:str]
-#ENC[AES256_GCM,data:yS3MHxAf0Sw8m6/HDA4=,iv:moycw+AhiQZdI959Ncd6KnDXFpqMEBcRiy4WT/LuowQ=,tag:Pa7KUejOw9ndzt5VPGajqA==,type:comment]
-PODNET: ENC[AES256_GCM,data:irTm/4vXi7qKoASJiQ==,iv:opn1QR/tRapNO7Dp5w8bErjMdNhu64f7nu3zhTuAxbA=,tag:l+c6YuXHTKtgzZH6ATKvZg==,type:str]
-SVCNET: ENC[AES256_GCM,data:+PNtsSWwTnbc3wv87Q==,iv:oPdlrY8ry/FHqoGHGJn/MFMfRzldt2niQNR9YR1JBP0=,tag:Ew50NIpXz4kquINzMH1eqA==,type:str]
+#ENC[AES256_GCM,data:sHCrQnMQngqE8vOETPRr8lmw4q24KwSyavFxspVP6/6CrzIKec5dfSOSNtNrEJlNS1UIMs0GW0ENn9U8U9s8dqw=,iv:KtkO/pIqeLC9D5ytFo7EUlLB8VIPir31+yG+A8KTRSI=,tag:PvwMO3EEINkgj0Ko/gtKHg==,type:comment]
+#ENC[AES256_GCM,data:G5ngVKxake27lgH3KB+c/7/cLoB8HhE8a2fepAzwK/jDY7DiUzXenrmlmuA=,iv:+plzymVexB43m/vsdTh8RXhiNocHh9Vlj05ADzHVBC8=,tag:m9hEabc4b5bZjGZ/ix608A==,type:comment]
+VIP: ENC[AES256_GCM,data:FSj3qMX9CFpUZdGOVQ==,iv:1MdOi4xGwqd9YK2k4yTWjmq4X2p/6FohYUkYVt74Ono=,tag:nXz4Aw6QkJVAAwFRRM2evA==,type:str]
+#ENC[AES256_GCM,data:k1NcAM2hMe+R2hPN4gco28mw8upHjjFii6Tq,iv:9RRcPsfO2aRpohPbXxevbUcsnoMZ94a4/BC5kgwyaNs=,tag:DmDsFC15kuuCJBQcPIiZZA==,type:comment]
+#ENC[AES256_GCM,data:kEcekjta22xUxPwx313aQsG+SvpDRndFUIGrN8tSm5qrhGNpo7JWOZVMTj6NgmLycEU3uChYuF5gCR1ox22KWPN9rv1F4jgYZKgPJX+hfQx1R30i4+se4Ls=,iv:RCIuAUJQwuSQab/H5EnR5ao9KGJpyDN4s/FNJjemTKY=,tag:pj+5S8OcI6k66zYg9n29+w==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:2TNljp4RJ/p7tXHL7g0=,iv:PxjX8zJOGRvQiHV9zp4ieLtjK01bDpeQnt81FmxtL6s=,tag:8jaXzjzAADZcDulJcMo7Xw==,type:str]
+#ENC[AES256_GCM,data:fIz1X8FjCeLNHZh21iqFoUROy7o5SSB4YHnmo9ksgae9bQ==,iv:L/5dU/V27721jMcoDLARLgEHrk1HvtOaGlq19NqlF5E=,tag:OvXb3PmeRq2ENI+JRrcx1A==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:6CWX0kqpg40PH0ZJGg==,iv:tm1fqPti0Vb31bciOIv2SV3toeSfpFRkBpYbv4yrjxY=,tag:2g18kSkJUEpqIN6Fb1rz/Q==,type:str]
+#ENC[AES256_GCM,data:QmOxNPwcDSkcXy77t9cxEgc37FX2bbMi/xoIkOx7tD0yDDuMhTmKBloco+Najkg=,iv:yxgEaYhGaI02peb88GcVZv1bnbzbTRnLMOwyssph1Xw=,tag:zXQFCXUknUKdNwF2adb13g==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:kJvjnCtPSOgiosNliMJPDEEDiRuh2CHhBQbNaYoYbA==,iv:oOCpE/Nb2m2W4VqIfj0K8wYRYFh5C/5RYLSPDNGEVLg=,tag:kg2bDhdMKVCDZcoODiJSfA==,type:str]
+#ENC[AES256_GCM,data:etQWKX9rmlfdEHIGVspktCzrR2wL8eM5ISEiQUNFs9huBLExvSCH9I5ARJmoQ7hkz0YhUQcHncoPoDSKcdz8OMO4dsGdSIXhYSjSfrF5d5jSRQ==,iv:3aclQZIZ+a6vQ0cKsV3wr5drhgdBkfXAbvWEhDS8Dog=,tag:211p9qkaRAdw+J2+1nQgmg==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:1vbMGBGeL0/1Af2L/XPR,iv:YtvoNPhyFClOZvIwNnkpKnPZomoaXXcUTNCBsJ1mUUQ=,tag:m6ZedZlu90pjnYQYHjs2Zw==,type:str]
+#ENC[AES256_GCM,data:a/IRvFhMM1VlynlOfSZCIuE3KqULINqNg7yYZ5zRD84d,iv:YqZJAa+e38j5liQSO2l8zbhC0/+lmAJgxdC54bOz2gY=,tag:x+OVhN4edrtSHuGsn4vXCA==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:vU8VcG/hMmzXy3gtFBCE,iv:XtsbTYjscH/91zfAf8BIBCrXQROqJvX7KuFteUUiLvM=,tag:i/EFbjK9iWTjYLQgnVQ8Nw==,type:str]
+#ENC[AES256_GCM,data:Ve0DZwQYXRIMyfHpe4TM71FCfoNnHFeYoBa9MC5e56TQtQMM+Dtx8J6Wyaty1yxpLVVZUsF6KOfcmZRMlGJuF0vao3+w4rJukOB1sNrS3aI=,iv:ozJEiYEUGU7/oogatqwLkUMJtuTO4Q0F+kzPZBIoZk0=,tag:GyZ6etP3BxUoC6WWd4bmKQ==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:xhMZXzxpihGdIkIVQIJX,iv:9gKKhCoHWzykrlnJinxj+2AcL4vTAjqHXkcl9mS1B4k=,tag:WXgxisYZjLTtU+fnK3bJPQ==,type:str]
+#ENC[AES256_GCM,data:agqzHriC4pscOBcFvavzyDfM6NZ4TMJ5/K6Xvkke5hVtD2kiwqeMGoJeazhwjYYHGBs9+4bzukhy9xazk00mpLMosQ+RsRbPRIMOW4/NfjFoFGWLUCjp,iv:3eSxH6lumNdnstTpPVY71hnc1P6fkUwjnwXiyoLriKc=,tag:PJEd3sKoTJkYvnxXOcsbqw==,type:comment]
+#ENC[AES256_GCM,data:RlRluM86t0RUKkLlMJmPEEHouomA7c1JtAJWX3JbkXQ51GL2rtSAGhNhLsPrVC/Rw9xy7NmfFwOM8ctJpCCGF5E9GFBu7VsTXqPGirjus16BffX3hlYqqg6hQF9XygI/4OhhkxE511KnrnfvOs95Ud1dQRgvkpgIuIGsSg==,iv:rEfOs1Z+mwEES9A3rim4ycSMTt9hhPTnsDcy2cag8YI=,tag:liKcQ/htKJeuNTrnujGsGw==,type:comment]
+#ENC[AES256_GCM,data:6rmexNNgcxsvl1fY+9UpUJs9xg7c1bqE46IZ0zzp4UUto6m1dXchZPpS8s1h3QYIfusoNoCw9Zmyb+2dvwgV5fpvHyaP1FnyWKcakxO2W9s=,iv:clLKgQHB9QrTHFkAmE5TN3QZN8kRDrIcMs0G0ptDYFU=,tag:OErI1E9uAE6JSmwSWcNKWg==,type:comment]
+#ENC[AES256_GCM,data:xovPsxJSGZOHmZ5VBKOe+j9OJlBV96t412044SbATJIrYQ/EDvn7UX0h0XKK57n5UNLbJN5K,iv:oU/Nq2j39Aw6WznFojjotfGeF4dbTvclu4O4RwNEmJk=,tag:/4ZsB90LurpmzfdNBGNs7g==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:M5JnSg+fFw49bvW+,iv:vzwu6FBe5qoNLtCGHDeJZTmJQjyAJgEdSAjZnJniUN0=,tag:xsfEuyqesSWoEqXd17Z/Ug==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Sc1SAIb882WDl2giHMsF010=,iv:OZo16LcnvywmhAgvc9l/oUc6hc76ODPIKGSO4q9B6os=,tag:XrEVhv/0KpWlMrDx7AVPUw==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:/zjzhH/PIPVUpxmFSuFa7kNRzw6GrYfQj+/NN0FLqRY=,iv:nqj+UaJdgZpJ8DGgRhJLXz55HJ5jKNdbGspFN9la13g=,tag:NO7CHKUy9rPgm67/4/v0pw==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:EwSkNaUv406lNdnrqANs7XpZXaWILQDp62hY7pjROaljF9Yy3KMyNA==,iv:9FkrG/kX4EhUvzz7VI5/kYjR9p2N3LafvU7BMj9l0C4=,tag:eVEaG3DDPpoZorP1x3D+LA==,type:str]
+#ENC[AES256_GCM,data:RUObGZtPkKMzVbZtCh1ivrrtgk7jpYY0YZqRzSA78VvvGOXtM/zbFi58fnEVTx4Trl0TKLu1ffgzBthxnbA7pQ==,iv:rklCJLJ3WfRB+j3kJwe1xnIjZQAfnTb3ZBYM+v7s0uQ=,tag:GWBMHuEi7jrNz90SVknFWw==,type:comment]
+#ENC[AES256_GCM,data:ChJd08kzl34S9hTgETja3+3bvGagU0j5ax2Yi9uJ9x6OfatKANB4/RxdT+Me2Fp7pm0XNbUWq74=,iv:xXLoUZRcit60LzLUmZhL3G/aUr3vLUAQ0yCx+xWpnDQ=,tag:JnzkLS6AB4Vr184cUMjdfg==,type:comment]
+#ENC[AES256_GCM,data:nPUIg/6ZNSVAJfsOv9uztlGKsfaR3sVA+w==,iv:WVg6KeBBhGSQ4mLL1V5IFSbIRbuhZtw6ZL/eOLyGc7E=,tag:DX9UYmPhiUz1/JuNmWJGyw==,type:comment]
+#ENC[AES256_GCM,data:bcc/FHGzScBsLxPIL6FS1V20lwEL8DN8xjsloHFiM0q+xKhCS4qBhBz7yItGGgY1kTQ8wSw+hv9TU3cBN6vaSFlIDYysQLvAdTxTJr0=,iv:WN4aMQU/H5DCi98px7kzaoDvuORQRlyUBuKnMIGTvNg=,tag:LelVsuGjYYbncqbFkMw4LQ==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:PceGce1OAGgslAMZ6VBAxut78UdT1YWeYg3UTwtG8VzO2uRIIkIPjpXlH6YCLEcn,iv:qoMafZN0ueOBht+mAVijnxrosAsA/xdKcsICOFSmlI8=,tag:cyby/9DIngFphrYcvXcepg==,type:str]
+#ENC[AES256_GCM,data:073xALNtdUCWsudcgg9Mo+w3G7Z1eDHAwKF4aqvzDQRqMz7W0tGcrK8UofshnKlspAWn4qBRTVtz2aesmb4FbLygDqT3woo=,iv:DNreJw8mieB16AV8kmMVaeUMiizvB4gJYnObOJkOBg8=,tag:CE07FqiNvNyUQYcIpfSFuw==,type:comment]
+#ENC[AES256_GCM,data:CMzzMjJtEnnBF793KknGXt+tc6frMRcnx3aDEigARVOCyNcu1SnRovzn3Er2nzgx4/bMfpC/,iv:fY5eapWqdcjCD6n+IKirj3kv6dgXpH6NW6faYUrHPjs=,tag:GMiHA1oFBnC1dHndL2VX3Q==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:pNUAJsyi8g==,iv:TVWJYcqihmvycVQW/Z8LeMoOKNVHuYzzX6IEnagIVYk=,tag:XsZHHj6Agz/Y0oBoa8HmfA==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:JR27ffLCo38NXWSwzfu8Pj0EbMY=,iv:lNHgcyVvqoKvnukz29ob92D2ZMA4fpMLVcL9vow3zGE=,tag:qzC76ieZMkjCXiPx5ACtGw==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:sEdsxVrApciiX8E=,iv:1rulODYEkyMhLKlfYCCaw0C2mb9CKv31I5B821ifqUE=,tag:XUJuotc93m4S/AiaTVhF/w==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:n1fBuahAlblUkzvJH+z7,iv:IAPt97EKMZLI4ciUt0GfBVdcfMBXUxl6IARr9x/0xDc=,tag:5fW5DMxCvZC4NRn2/sPW4Q==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:N17qTUqtw9r99J+LHJtOexoKeHuGcP3fJg==,iv:CwcLQc1UIkQTH12hvozi1ZY8i+/FQt77uSRUKAeUfuY=,tag:0qHb9tfTZHMXap+kfj4cmQ==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:2dKiYeCqbhEhmXVJHo5OrhmyRlGIf2tp,iv:0ujpT8l7/T2Y72bWV7OhvlGhORzJ4iIXejj0hYkqrco=,tag:Q8xKD8cPYxu2LmXZDi0dlg==,type:str]
+#ENC[AES256_GCM,data:dc3fGIEytykA/vqwRI7Mzn6cmdxobqCA6cOlo/iBxM69YIpCZmQ=,iv:nw8OY7AxmbDFdnisuJlpsshpYMl9VUy/y0SAT562RSc=,tag:/PL+qQdIAAMR9ZDrsB7DAw==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:xRczr7VXRsR91v1HhEnEnVWJjGU=,iv:OpVYCPiDQvAOQkAwXxm8fY8vlVBgU9taF2v9k5v7Eyk=,tag:DbKu0W8nVPVvDLvpm2S//A==,type:str]
+#ENC[AES256_GCM,data:Odqw1CN3k0saywHZYV0=,iv:4FTTeq/FidFcpb5/+SFM6o+ygWgZ+W8UYtsmT5BCjuw=,tag:IMlzydUbmZHcjR5OXZvhAw==,type:comment]
+PODNET: ENC[AES256_GCM,data:vrrTujTpS91swrb5Iw==,iv:hcvUiMVoQ5st3E5JWDKqFY471NuQFGejXmAdvQLXd4k=,tag:gWK1F6khZaQ0BcK7MwOtsw==,type:str]
+SVCNET: ENC[AES256_GCM,data:mPTQzFexay13yf/ZXQ==,iv:14Crye4f3Yb5hfY98NY+f/JG3NlkHUj9tKO2tNyG14s=,tag:LI6fUUm0MeILw6UakepnNw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiUU1jQ2ljZ2FFdlJMdkhp
-            YVpFekM5MzFqQUZrUm1DTE4vSVU3WStjaldzCmR0ZkFBQVQ4YkxaaTVteWZuWDdL
-            dzJKT1BhdVQvYU5iSm12OGNCczVwNE0KLS0tIDAzRzJDNGN2emovMlZPWDU3Ykw4
-            dkNjUThvMzVhaHRrN3FOT21zdjZwVkkK45N6RvVuQJvXD6XSBfDDtBCPEntzInWH
-            lbAVd56S4iB849iiV1bc/yNEvUwT1lPSgyVJXujsLKoRKVwaf2Zi5g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvUzVtbXYzZlBlSlJ4TC9B
+            OXRiMnVPbHE3TW1Kdmxwd2RzZDFUeUFMaTM4CmtwQnZ4anpCRzUzMldzd1paQm1h
+            STRpRy9ZVFNpNGZQbGtnajdMSjlxcmsKLS0tIFlYWU10VHFzTUpYa3JBRkY5ZFM4
+            OG9sZWdpZCsxVjNMS2c2VzBRVnNsVHMKC9OUmZItI8e4VmZkONeGT4kRPOuTQrYB
+            4UZbbGt0J+A1R86aCtkUATAvQgUJGFXZCe8xWC892QokBtoy9ja9vQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-11T19:36:14Z"
-    mac: ENC[AES256_GCM,data:YMlLPPOjs4vfmgwuc/0Af2wVvZbPrx+6PxL3U0XXQ+zlyVBSTx6NiLzEqpNxsT47QgcaZY7MAYFWytA+6Q7GT0xoHI6VxI/OTvUcbLySUhnMuRMW+DCshfLCjxKFUVcr3N6TQWOqQrZ35/5adWtaAibkTTqSug6KmWmJ2y0zX9A=,iv:bLEVMU2haZcpbdrNHotz5PvLEY51761IlKTdM7VTyXs=,tag:d785uS5bMprDV3adrVuH4w==,type:str]
+    lastmodified: "2025-01-11T19:40:52Z"
+    mac: ENC[AES256_GCM,data:ujxR+Dp4iDzxtK50sMFFHS87RxGS0tShT0sIm0ORjyKChHUAkz1HTcirImdC9LS9M8ueoqsKJB4TQiqjeQ8Wm6hZd8N15UIY5CaTXp+CwwnJ/AZbyvXDoXNNIs/05eXbbugBbChh54WGPiahCWXF/Z66WydhuoHSxJwCSa88V9w=,iv:8k3FVbJGsW9p/bAPraNg6lgkYdUTIRH4RJqYD+aKNY0=,tag:candsNuu09qMnqWKZX1K3A==,type:str]
     pgp: []
     version: 3.9.1
