--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:kBpfJQR3KjmnGCLbACXqxG65LRkzGzsBsLpXESw12hr6dpIeUuWiZ46bbkTjO2WADqpEkbAAzMFaCSj0wGm69Ns=,iv:Le+2+3CJl+rCIgxutQAi67mMThf9YvTmSypAjfoIR3s=,tag:O/4XTBBrKThSY3i5kOvx9g==,type:comment]
-    #ENC[AES256_GCM,data:w+LhYNQWpHzblPFcP/p7Edt/Ov+QQl/Y26cxxU+uTbr8S6iWANCjK562p3Y=,iv:gNvji70jDlGXaJuxDMwRMBqgMqH4Wd4SDVb31G5NElo=,tag:HMSt+apreCBol/B5ogWPAQ==,type:comment]
-    VIP: ENC[AES256_GCM,data:ddNYFRaXcb/O2qAs+g==,iv:HVpFcPtmJrRikEFL5wpZSRcPmEmv620C4ti2m0HnqMQ=,tag:7VDCR0okLATCyg8zHWGVew==,type:str]
-    #ENC[AES256_GCM,data:C1zV+Q4GVN9EuJ76j08k32wjIlCCm6/f6B8K,iv:j0a15U8r8Sqioa0+YqP3FzpzXlNIrs0pwiM/ZGLk9/s=,tag:u1evr7JjfYQovKwxnx7nkw==,type:comment]
-    #ENC[AES256_GCM,data:uXnTTyTkqz+PI2vJbivEO4aWGIYWZ8K8er8zAVcXFwcCtaeMt0eL7gAHMnqF6O5jwSzcwotK4aH7c/jJy4s/mzyrTRx+uAXNa4I2BYxSY6H8wGQdtv53zxs=,iv:H+T8GM2+OX7sX5M9wBPrnTGYh4V3YuFEOEF2TRuFXEY=,tag:14YeHTT2of53wsN9zC9E/g==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:uQje6ZrsmlWJJ51uhdM=,iv:ttkXW9voEKwRS2dm4uyFLiav6kTol8vDqtAgguJKAeU=,tag:2u4aOigknUtJFjn0w7d3LA==,type:str]
-    #ENC[AES256_GCM,data:uA54AV0xMIqO+BZ1Sx6esp2JK0yJyCJtArTwANkqf9Roow==,iv:vpB1VCaRMRqy7aXHylKvhOMI4kArzE4LbeJamqoowF4=,tag:M3tP/MkwD1jTmEYS5Kz9Fg==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:vJQHMqeagq//KTPzww==,iv:ue65rk2ywJl/AGowqlUpUh0BxtXQcsK52+QWEaJoMTI=,tag:9xPb09zMwRscIlURkDFuIA==,type:str]
-    #ENC[AES256_GCM,data:Nn8du39sSaxFVGyx6jYUXe5EdnW7MHKL/QqbXLgYb4jWAljvFweWh3sjxc05HkQ=,iv:s5Zzb70F/N6fuwz1+EZhST3HxhCmYYx4raTHJv43FM4=,tag:jSFTpUcfyt1g5CACce3VRw==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:wQ7D10WgAqaowSxoBaqO5I1230PZnqnyWBLiKRKowA==,iv:G49yh3UzfNpUohP8VxGkz2RLRiEfD3pMCFzBNvBO3wg=,tag:X23LqyEuI2eGsJeSTzOfWA==,type:str]
-    #ENC[AES256_GCM,data:PCtTiDRApdvyg+5NhwhrD75fvqWpqVT1Bzaw2ghPfRngjXK0PHWBvP5z58NuDPqb0ujGTDbQ5cmcmogI22Rpb4vkX7HpfuZZixZ+MUQDCWyLwg==,iv:fwHx6XWYUn3BG8+df08qkwxDrkG2c/veYd2o8Fo48m4=,tag:Sa/1xVaiwefIo5M+GRkHdw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:JXtmpuMHgVzOp/Rk8VHk,iv:6KyyrYrNGOJOwIt+Np+kXw5Gh28zz2zmJozY3RStFc0=,tag:FNqNIspDS3iuiCENQIATiw==,type:str]
-    #ENC[AES256_GCM,data:FtF094XkyQGAMdeJcKuDKgsFnKn9XPoKb/tC8LWrPnSb,iv:ppvZ+xtFYdMKIISJiPNhBZ3//JmE8N2nObLQ/OVdie8=,tag:EzYoP8mnqZ1AYfxi1fYsOg==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:ujaq5YCeCNzY6qbCuyli,iv:UqyV0Ew411YSC920r9bkciW9ZOX12HUS9sZMzmowHrE=,tag:pUHvKLX349y4R5U03O+F+Q==,type:str]
-    #ENC[AES256_GCM,data:TR6VUpewrDKAVUY5IHwG6pDej2SVZhbBOP27a0v7tA3wzvH0tl3pAJgafW5JLf0IXzBADc2MhCJBRzclR2uwsYGMIuMV3O2Qkh1cAloj0X0=,iv:3xGookvSW1FJfw2P17GQg87Hn6vh468lZviEsAvtAfs=,tag:FI0WLVjXUTL50Vxl41JdsA==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:ZEopu51nvJKzAB4s7o93,iv:df7ULfqZYMskHmVzMIsJeAnGhmaDSvqprjDNVYIxmP4=,tag:Y4XGOm5HifTznRpD+PkgKA==,type:str]
-    #ENC[AES256_GCM,data:wPBsJji1xxy63o8pZKrTU+GyR9yJm24Wqr3utK4rDtCGA+nEh530nRYkMKY55WANjThi3F2sor7bnuJ2lr6Fju2Y+USNMwyaCs+GIfuq77oS1G26JBwY,iv:1gc5LTUxWbkQLuui/O9MBrvdVy5/BqUj+hz9T1Nu3FM=,tag:mhJyZ983b7YsNx7M0b+xiw==,type:comment]
-    #ENC[AES256_GCM,data:aI5uE7Bv0gpSunldiA3hNoMnBLkCj3/JdjjtdpJc0s0x4STJ2iUjKVN/7e26TaWEn2jh9ljFyDh2tV2h/p19sMnUuNnGLdI9q6LxOr6lcANMw4BUHu6N4RG4agmDN7WZsDso6YGA3Qo7YnmeVuJUsNmcDblhOypCxCjiMA==,iv:dD41xJjAmIkr1Em+Wp68qVz0o6S/Yp0raczL8exG5mk=,tag:dSZ16BLve1K4kRw9GiLUQA==,type:comment]
-    #ENC[AES256_GCM,data:fsC0ukI4yzhWLC+nfAtUaQrhnMgofDLJq1cR9s9Lu7uurMTc38EG3kCpCUnxM6Gi30mxFACADZmMFTnTnGshkXx0nHt67ky4oAL3ysYbhHI=,iv:Q02xQ6qxSXOxdCJ+6N0hweioievlicCIFt6pJBeOers=,tag:RedHo6pnnLy6ii/r971p3A==,type:comment]
-    #ENC[AES256_GCM,data:FDWECjZkVvSuvxkHNMLBi6qnoTorne7KZsiy+yWTxppjsiprphJltZDIBtymqpWm50yj9ixh,iv:JBVKFLgtcNTSnEgb/O2KOu4psn1ZqNrZDa9Ggtod3HY=,tag:Fi1GJLXf/S6YQr+ZMWb5OA==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:UW0+0tMai00otbqi,iv:bveybZ9xRT7eFrtb8EXqVaFpnc9l7BR0q1I3LXZ7Kgk=,tag:v6QEmNgTL4bGH7sKuhRQxw==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:mUkfjw/Xzzj+XvB2H0NrMeM=,iv:qj5CVXPJdMQs8T3NawPeitX2d6yqJAdsiPivFblSFu8=,tag:3qfkEUtkj+ytgX0GRIxyfQ==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:5JfVobxea+qdObZj+vXGFdDcN/3LI35Q74zcnaJdgwQ=,iv:xIQrS6T3XZxueecmAN+i/OsJY7hpL+eOuWFMr+440CU=,tag:JMKXtoIWta2PJyCOP1zwSw==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:+sFbMu+U9Mw+8I+NZpbgRv0cXtEuY3Lb4EjJKbSkWWiEQYQyCcDerQ==,iv:JvMTiQwROG3MIxgbeK/2Juf0sTmTlOy9YUYCtiZuTv8=,tag:0cHWrNRbPb25Sci8AHEvlA==,type:str]
-    #ENC[AES256_GCM,data:qYeCx6uCjGfkjpNGGQuxq1eWjgr83qJb1SxtcozcVEpP8d69G0Wsc4i5MdDfC8CTFuNFNM2Bzj7UjWfipO4U2Q==,iv:I55ZzlzCLyPU8tS+kRDq58XtzTglco8g+nr6+Cces6U=,tag:5oiRbHrH4HT08Fu6xwi2kA==,type:comment]
-    #ENC[AES256_GCM,data:FA3wbL//6TS99N4Pa32clA8D+VB8rK3gDCiMRG/RGc86RPeZ3Z24bcsJKOobfi5dokyOmaP2SBs=,iv:u3wtBLYBe3TH9iR8v+8GSLfn/8qom2yceVxfGHK4Wms=,tag:VGfnkpZAGwtSyaZjt2SSqA==,type:comment]
-    #ENC[AES256_GCM,data:duD4GELTpCZZ5ADgqvFXzAK2Z5pd1I6tHQ==,iv:59FOp30a5TsTpZCVA7f5O9HvSeqDxWSAOYmdgfjAHhM=,tag:z7zzvDBLAOfSEqzXilTPpQ==,type:comment]
-    #ENC[AES256_GCM,data:BguHWkbf3YAcC6MNcUJLTJBHKTxnj4FJmCEGObTfBSREoSR85aUauIC+QdExe4julL0LSoe6b7O4U4EcllK4DrBT3zMXTVK4FFEIedA=,iv:ASra6UXDoCtVPovsP0jC4fgodf5Pm1x3BsjebO1yru8=,tag:angXvmwFbLj8dENHR8fnFw==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:wFKc0+z3sYx1f6jHAXgO/vIfSgvgKUMT2gQHXDqfCrCQHEK3oAYgUMD/x0eCQk1m,iv:77VaXoGlJuawPtIBJJFwX/HBN++NP1SuDZkxCE7qo8M=,tag:8uBjri15udBcCUjFzlPHKQ==,type:str]
-    #ENC[AES256_GCM,data:2NGzhbZS5kaOmbYLFCZhQsuFCOCCe1X66V9phht0QViJ54cRh79W8RXZlAYW0zAETW8Q8A/iFQv/MuHZDDdpPmndjL9zFd4=,iv:nOwRQCpW3A7oA104qeBYRjpP51EPMVo2fD1rYAYJGt4=,tag:2xcRBDcBKvnrMMy4f1G0Ag==,type:comment]
-    #ENC[AES256_GCM,data:ynhW+qBU7xcgzMdHFVtEm7eQHfGRl4tFJpp1p0JsQlGRwy8zp0O59FsKnlJa/MQjRzilGsR8,iv:FHheDklBSJEN6cCGHSy6+xAgfIJur4tm4AqPUHIlUgc=,tag:lAoBEjasiWLe6hf+XTODPg==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:28ZsO2ANZQ==,iv:DUfI2r7OvR6slO1Ak/w8iyPonBvqnurPd4wo5FU6NdU=,tag:4ghw3sp7ke8o75DAj7qksw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:IeYVJQHHyrYls4cNs24hpemHbYg=,iv:G5O1lvuzmh2QRODKuRUMpcJDkWGYzOUnBjqqm7i/nS4=,tag:tkP0rp+OE5ccrnTlEdCsgA==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:oW/x3b9jnbuEFt0=,iv:ptOqp/a25GBjZMTys4HJeAbtqYEkzHOC0/h13HsET6Q=,tag:Qn3nr74HYY8csrk5Cb6R4Q==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:1LO7ezrkhPvWcCqPhamt,iv:QHuEVewliKW6g+/k3j1LvWnKVsC/AY0WMrxkUtXvegc=,tag:5W0Z5xvZuicmO5rijIph/w==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:eiIAXiuFkRn4TtqKYxMPD2XR7FoFCIqJ0g==,iv:f5d2RDiakHgo6dpgrOpu+K8VvXt2JROxgrSmvo8olKk=,tag:kwGjlF+UCBQcKvvtdwv0eA==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:DcgPDvZaYMviz/87Oye7Fo60kwtwpkIT,iv:5lRnK6kwriKf+DrbuxQ5Q9WJUnO0xceZq5l/5ls1k74=,tag:IqR/CTsqh3z3rXpEr9jIpw==,type:str]
-    #ENC[AES256_GCM,data:KltipHbI9eC7W3qs/j1MMPuizsNP95kEamNUG3T04TZ1ZqL7qtg=,iv:Se41qkkie6Y2rTUy2CBAAz1L0QNSF6uIavrTZPXAFu4=,tag:2aFvlTSAjW1QQwsk0K1jRA==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:ec5gBJhz2DslsUcPBU7womYN2Xs=,iv:I5Pcr1fIcoEo1lRl/hUPuga8CMFg/D2mgvKXPszEwjo=,tag:jbliMoL7nob1nqwjp/W2pQ==,type:str]
-    #ENC[AES256_GCM,data:Ep75XdCttLrjZFKqFRs=,iv:3M870auiaLK4l58E8tl4sOw+ueWDrwfODqrJ5Q5FNSQ=,tag:rGVNoEMN/9REpnBTVz6EKw==,type:comment]
-    PODNET: ENC[AES256_GCM,data:CS1v9+JlNwwKtgHbHw==,iv:wr1NW9QAAEX23zeDUjp76SpWDj94Y2B7Lg/3PV5b9pg=,tag:d27AzUhWeEMw4BhnSVeydA==,type:str]
-    SVCNET: ENC[AES256_GCM,data:g3KMQ/K5y2Glaq65tw==,iv:2udndACvrbw/ssetNTksZzEqETU5Ym9Jd7QvKkB+fuI=,tag:pHk3gBZLs5tmsJ3HymNsiA==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:D4WAkA==,iv:qR+QZgrB3BVcoUyB36zHzwSm/1tBcA1CdsKd86HUntM=,tag:xFBJj6Cei9TvuzaHwwjDMA==,type:str]
+    #ENC[AES256_GCM,data:JRUmcVs4m+b7PmQr3+OXYEq5e25e08zs8Jpzt5H1ElXfo1iXLINooxmPFfhmQKoaOlaFkP3qh9jqmSSq6qmLzYo=,iv:PaO/LnpIRfHG8dQr+/gqR/3V6uPSBIg2Wuhz2Kt8xr8=,tag:dOuy6tY+m+MTt/TUR5kJ2w==,type:comment]
+    #ENC[AES256_GCM,data:Cl4y3DPL5vSTFuVdoPbvFX2+rcck0ije6DZWDvC+sRGQZVP8BnfBKYAnD4s=,iv:1HYvo+krM+5Trmw1gc1XlR28XODzqYz5hiCYM6jvK2Q=,tag:WnpTpvcrKW85iBkJ/rW3RA==,type:comment]
+    VIP: ENC[AES256_GCM,data:5539MxTCu4/l7BmuIQ==,iv:31F/GztV8OvYIhLO6RD+hxJTZKa9kVRWetxgj1m6ADc=,tag:MsR02+Ux9rWHezzzkHYeVw==,type:str]
+    #ENC[AES256_GCM,data:L5OAnnCekUJ2ByoL01xtQa5X8MgrNeC+dSfn,iv:34X0sfpqMt3AMSyYjZfN7GM0hjd0KiEbMj6Y74C/B1o=,tag:cjCocHdyYa+btCioA8LBCw==,type:comment]
+    #ENC[AES256_GCM,data:DqfloL0IPVgvx6cboAMYBYaHQ3o32rcq3bz8JkUWtAJD8FR0fs/NewvDWMTqtBkpk2p03tRMd9br24zEnbX9pAG1hIudROFo7ij2F7IW6PAGukLCyc77HX0=,iv:lDRCCi2JYAfaaFMb4t3958vfzpIsAgnO3F8Yw/u+xFo=,tag:C0oQxEDxVdbQzq1OAkdFAg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:L7ZupWLc0gW5sJnAw+g=,iv:uuVjyU229Olx32FhFOnISDBDAd0o27ZeHbFVto29+Lo=,tag:rIP1RMR520GpizpxrZoO1Q==,type:str]
+    #ENC[AES256_GCM,data:rLWFPUH73sWznn4xCoSf3I2HdBVPWwJvGScL6nRQC0Z1bQ==,iv:0+miy+loPrxDZpWUT4KTDQK59xvCSx840a65Gl/cN6o=,tag:o54eUVMH8hwNZDFC3QLsdw==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:k9eiz7uLhdpiNWfQHw==,iv:7kxqKgfngUm9fjbeNfADuk91E16sWmBYREiMEGOYyXE=,tag:o/cO44FLLnwhwev1SyZgkw==,type:str]
+    #ENC[AES256_GCM,data:A+yBCI0RqMa5+plBlMUILb4rQC2Rfcy8OCJTtN1eFVPaUbeYTLwKQL+j06bleaM=,iv:ZIYWkfdPOplTz2klJmD9jdJL8SpHADROYCROuSSaiz8=,tag:ygE7LNXLS/mQ3jRgz/VQ/A==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:f4ccgOqwa6O8q/aeLRbM+dTGwTse+ADM0x9DoFREdA==,iv:UXiuDJ0THBLsxGCqhq0ErPBktQZh2qITj7umles43yw=,tag:tWiU1DBj/54DP0/CmBUASw==,type:str]
+    #ENC[AES256_GCM,data:Zu/Rl/QuxB6FZ5ArULeLaNcF3mn49i1yVTwGLkXUzlJrbhEKSQcq60kc6BEPiqm6xf7igYnnI9vF0rZ7VIYplsGooE8lLjauySLeCYM8sEjMfw==,iv:mD0tvKUxB6CcgHyIrBtguzKKRJV6FSZ/YNtdm2IaaQc=,tag:aMkVVaSEzeNoGft2WHOUHw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:pjy/qeH3RgkRx3OdliwY,iv:c3+/5rrYxZvnf1qnEHWqqapqxwPH2uMyslcpiWEzj6s=,tag:qFdGkTd9XrqGOspAdc2K5w==,type:str]
+    #ENC[AES256_GCM,data:flkgaYlAHgTV/lcPsyC4HRVBpyacHiTGjAZLZRs7xsQw,iv:Tc5dbAJXlB/bm25EmJCUKoID56E8hin5/nbys0OuXb4=,tag:KNa1NGSAlQ+Z2/gBt9Z0HQ==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:XqGMbHifp49bVm41WCg4,iv:+qPc14q9ariEFVM3tQLLovltd56IrF6B7Opj6Lorv1A=,tag:zaTbUyPjQtb5l/LAyw6GVg==,type:str]
+    #ENC[AES256_GCM,data:oxtZB3NoZkRTNnLFx0SCkReo8b0Q+bjqmDMoDzvFm/BDAPUwlwAqYON/IO/JjSE0Mk2w55zNXd6bG0u5eKG0Jhb1JSsoIZP4qDRKfV+gwSA=,iv:jTuMmXKMBWx9+1oud/Tkhn66z3L+o83N0Dt/MMSu02g=,tag:4Vd/CvQzxEOciO5d1I077w==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:KbEvoQ0pZ6hRyDZOUdjI,iv:5iNlh2LGBvCPiA98WwRbA2C/S9Eg6kKoHEuYJ0db5VU=,tag:jzye2SQA7IQMf1IGkANX0Q==,type:str]
+    #ENC[AES256_GCM,data:rWiSCb78Awi79QTdnqnkECjGTYFqYKTS7qR1KKVoeQBe5ub44e7R9jWlS9TMa/o0Iaq1je+3PEkLfia0j91FCp9tovlxsLTIsnLfLifrcnJm9JqezRBF,iv:+zFj2RZTKApKlRS0ZFtUqYXMSgGmUTIZZEw1JRdHKfE=,tag:+ciw4O87iM4rSFA4Mcbzzg==,type:comment]
+    #ENC[AES256_GCM,data:jKZoZMUqxBZ41UCpBZMZH7Puw4FCV0w7fADCNhfIF6Df2fNwd8AnVW6vNgxou6JNmxaNUs6udhTx2pvhO0h2PSC31KwvzzO/7Vv15ZD7ZGDYWihISaIuWxjDxQzSkng4HLO15dfYTT/XYvJR/x9lrZA30kfYerjlaqxwHg==,iv:j86e/sURQDbwh80OqExeUigapeJj6sCu+R0nV+a1p3U=,tag:Wxy739Z4YQkhKF/KRnUp+Q==,type:comment]
+    #ENC[AES256_GCM,data:q09e1cLqzfXMaPPXwPGq8nr850RfMSTQ4fY33C8max+DyUVsqXs0eUitWow1qjTR5Kxid9Mmom9LSJ5aqIndJmFXPMXW0pwvDHVeGHjsVeo=,iv:+SinkKdUaqcFMphp82KjDaQpvFGK+62tL5pYmdzC3Z0=,tag:5/lkZgWa1p00O8cP0KVT6g==,type:comment]
+    #ENC[AES256_GCM,data:jA4XnO6gP3xO34kSUOrVdt8LLCkVet8H60/jKqS3P+Bfi1HemoFnn/yRMbiNtuPsTXjRjAqB,iv:/w7uyFMVMmemnYUvq7W7oHEJ1uvREbOHBtCvcDpAhTg=,tag:r5ncNRtRDdcsY5NBxWzlYg==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:43UdTLQeiAPIO9do,iv:IhwAaYviGfFiSwUW3Xhs2KFoStb0g8eqM1ONtQWc78k=,tag:yBt+DhUppQKoQhbGP26u4A==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:LrhPcezoKJrfHdorn0JrINw=,iv:+5GSXUfUtATHFetz7hYbcdK5EbK6pEWQEaxDxptfNSY=,tag:K5nIa7m96pesPS3TF9HbSg==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:sqA37OGTo3NBt14vOLrS9/OESzcWXSp55DG4XiyABK4=,iv:IysGqt6VoRjb+SIfoPwy6OfZLiJhkH1PR+UlVRGLqtE=,tag:En9UvyaitZIVS4PLG4UN6w==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:58ceJYSbLK7ZZYU5V3t6Qu73N4U8pAWfdXEpXxilIa8mbFQcSQREBA==,iv:N2OnDQULnLeSmqdJRf+8b1C2GHYotqCMVxBSlwP/f/c=,tag:F8B6vgu+pQnNd4rKjjMoyQ==,type:str]
+    #ENC[AES256_GCM,data:QPIaL6pB4Co3QK3bnx+00H2N09NM2vlG8EZ5DanDFJ6hRjnPnZlW2YuudJqYdQvY8lLo3+uFwhQ5IZmOKkn0Nw==,iv:rcE3JngPRR1BL4vft+G1Fekf/msFdhoW13LHLQIVoqQ=,tag:X7qsAHDC7mTHipJQf6dALQ==,type:comment]
+    #ENC[AES256_GCM,data:UEB5ctiE2+qC0RL5aG3HbSPNLIE0axxBoUZTVdSXyKHqooFsWlHIA/3LI/CALurkG8jQaTFDGX8=,iv:DDJ7qx8M78Wy3pSnWClT49H1UHUNjyFHP4VKkdkvHCo=,tag:EK0H8MqPgxGNM14duSjoCA==,type:comment]
+    #ENC[AES256_GCM,data:980OVDLX7z3xzlgjPJxtg/EK4sCf3sbthA==,iv:k8nbGWGBpBjZUdElAX4TwPk+6XjZVDt4E0rz856QVYo=,tag:ctgN4k5e+goIu09KkH+QDA==,type:comment]
+    #ENC[AES256_GCM,data:zIQg3GP1zz3adqt8TSQ4iXhH39d+WiRhf6u8tIo0u6zHUBDpwyRpRT07KTwq9cCD1RFdnSUAfW0q5UM07CHMAcSBUnwfpB4OGrfse8s=,iv:GzKiHkCtpFoSQE5pWYI7rMvLIjMoj5+NKioNqGp5j7E=,tag:m5HcsJZzcjQQIAI8/9cvgA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:EyEnZXAArOfBdEzXsAYCetPRfENUh+Ozh/JgdNxWv1Kt8GN6aZbVHsje6MRjiwk8,iv:W7ZTYodfS0Q0wyuNCbWuJQUFCHCtnkXZBsKhnpzbcXI=,tag:7zao6o2fjWNmN4jxPE0UNg==,type:str]
+    #ENC[AES256_GCM,data:qL8fAb/xw95/hcwzS0Gyl4xDhMsBJcL+fF6Mc20BdajoAR/2qmYiNFUSSpOHIAwfQSFLIOpcoRsQsLkVCmXSno9mJJStW1k=,iv:aiLCBfYjGLsVghj2dRk56Q4STdT2V6dArByHl4WWgWQ=,tag:Leu66s+NwHdvSgPU25yTng==,type:comment]
+    #ENC[AES256_GCM,data:C99sN2425mSXyMkVEjlpyYfp/lR1Tz8a+moI9Un6Z4jxqKVI0f7t3Hx44Lo/PF4qFzMGrQh8,iv:khMXHKedp7/kLARBYuYk02HLkbNyJEL4uM0fzne9TOk=,tag:IDyJeFyUC7etrPqaaj/L3Q==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:6x35wogBIg==,iv:gK78ui52UZstTIscArc4SrwNAiWpr33DeIrBMHm2zqE=,tag:wl/RzJqbVgt3tqnAqZUG3A==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:zD8pJPtGbxV+4zJu1h01SbM7d1g=,iv:LVkmjmZbjsJ2YEIdRJ8ywKX6vZrzF4CQ7l4PnCQIH8g=,tag:xhJYFyQiciLorV7Pekrzpw==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:vmQJoA80reIthpw=,iv:BQ9z/+t2FbsX8DYOkr8mjw6s3+N2OhTHb3T+s8k9eAE=,tag:tapy8Wx+5NV0GAZ4cg9U4g==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:XM1xI2WH9R5vlsYHlhRj,iv:oKUPKqcS2EJ/6/siTgDU2OQfTQ6CWNPt8mGNkdSVOJ8=,tag:Xmniy9l7SUK+A19j1VLKzQ==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:sOIuKgPt+sF/0R9ZKGRomMkqTwHQOhgM+w==,iv:sqtxIDics3vFATlcJKvkn3i7TeLVWda8tqQ4p07lr/Y=,tag:UZZO/u8Ex+9ULdvmtwYFjw==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:03mXOLly3l9R9RSeIGZTBA7kGmpp7kDO,iv:hLSqxNclb95HFla+zoh1Eu52nvq0P+9gFM/YpNSoqB0=,tag:GeSG+GX54SRGHaNAM5f9Eg==,type:str]
+    #ENC[AES256_GCM,data:d2qvaUlJwL8sannfFdyNqUfasMmTpiRiDX/+2efzY/qX1U4b8wk=,iv:LmYxhW8dRkwbEQiYHxH87nStKIwgg9vSOEPcryZCwoo=,tag:tj2UPcgyjcHbIq+kO4Oy/Q==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:M6UK1xYiSrXsjwo5s4tiUdbrY/o=,iv:zBGZ1ZmAKqYTdhtubr5kDTv6ycMuwX0cHN26Re3Rb4U=,tag:M5irqZHJM01f5AZ16iyD/w==,type:str]
+    #ENC[AES256_GCM,data:AN86AO6rXlvLprkaKr0=,iv:6PoZmU0LDfK2T0GJoGKFQsg9lUSX/B/p2XtxKqO7iRU=,tag:yq9rDPmhpEvAezUcWyKUlw==,type:comment]
+    PODNET: ENC[AES256_GCM,data:wvOFV4cm8V4I+jU+og==,iv:7TV1466bIDIvP1Dk5yNbGizUZKDaE5GhhX2+fqWGgkE=,tag:HXv4HL1P5ahudoLWGTM++Q==,type:str]
+    SVCNET: ENC[AES256_GCM,data:19HX1/j2TGQlj5WIwA==,iv:41k6MolmBFNEQOQhQHAzcrySuRfMSkSkNjJdpNiqGOs=,tag:TOd4C2S9Dgv7gN6PW18SEA==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:BXchzg==,iv:HDEbDDrOeB+VKpE4PHas0LBrpHUsO+iAmCVxGhNQDVU=,tag:kuwyUP6YHy0IicJSGRhQEw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiaTZFYjcwL3VQMWMvemZn
-            VDNNTXdUTEdubW1Pek92T3NralYycktRSnpFClh1a3oxV2ZWdFRQenF1ZWhnbU5O
-            MGZoR094UGQvblFuV1BaTjRiVE9pcjQKLS0tIHF3NmkwQ2h0a2wreDU4Uk84MWph
-            Zm5DOWVRd04rN0hXbStaUEhvdWI5bGMKaXH3kPqItNBD76VFyhduCmhCDRlMXySg
-            LRFjQRONVAGoiLgO/Fbcc4T38XhzErxtujS/tWltbAvKmcUWROBFZQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBidStYci9HWnJQN0NSWHpu
+            UGNQZDlpZ2FzTUVLbkhDN3RxU24ybzErK1Q4CkVvZDNEWVY3bi9Pd25XajlSRzhS
+            em9FSm5GQWlERmhkdUI5bkpZakJpb0UKLS0tIGtWVXV3ZFRlRkVjdXpub0x5bGNF
+            VUtudXdLS3dmb0l1eWpvZ2FJRktCTk0KEPGghwSYgjAqdNaOYfjbBZcAyw8hSUAj
+            l5OmrK5If5Ip80KzNQVle6v5Ne3qcFGBqs8JIJ8fBug9uzwrtnptPQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-11T19:36:14Z"
-    mac: ENC[AES256_GCM,data:QwU2lXCYR+vrjaQ1BhZ2xEY4VRshZ+bPRTwqebwlsJMrM819RINsJSIvPDYmHOxKhPypVoOaE7xjdJdTZyFO0G8HgVtAp5b2Vwq8UzG1fp0AaUYuzTIjSC2baddrauUSZS3BeLDLy7oRDhWZB0+dhBSm6IeFYmjmnJmSCYCXzTg=,iv:i3MmpF4Ull4qbVsfur6jM998JgFZ+h8Uy+R9CYPWV/Y=,tag:tRNigi44FEb8kgsD+jTEXw==,type:str]
+    lastmodified: "2025-01-11T19:40:52Z"
+    mac: ENC[AES256_GCM,data:/aIzn1+NIq5jd8/Lt1ddcMvVPDmbB27cK0lPA89+S9UgBScoEPMAyEVfbWFGGWBfykkXRm4NuTAIxHGfei9lFcuMrGOSmsf0p2ZBdPpAnP+sPWLWpIAtCVE0a4D66Z3tCBDR5UVLw5sctWDnY5IDwCESU0i2HFM9Fy7BzNZBBE4=,iv:UlaVIVmn/Tw0SIZfVeL7z3hbwRrzIYjPfnUeFEtAO+c=,tag:xXvo7ThrO5LvampAfgQulg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
